// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`loader issue #1033 (2): errors 1`] = `[]`;

exports[`loader issue #1033 (2): module 1`] = `
"// Imports
import ___CSS_LOADER_API_NO_SOURCEMAP_IMPORT___ from "../../../../src/runtime/noSourceMaps.js";
import ___CSS_LOADER_API_IMPORT___ from "../../../../src/runtime/api.js";
var ___CSS_LOADER_EXPORT___ = ___CSS_LOADER_API_IMPORT___(___CSS_LOADER_API_NO_SOURCEMAP_IMPORT___);
// Module
___CSS_LOADER_EXPORT___.push([module.id, \`\`, ""]);
// Exports
export default ___CSS_LOADER_EXPORT___;
"
`;

exports[`loader issue #1033 (2): result 1`] = `
[
  [
    "./modules/issue-1033/issue-1033.css",
    "",
    "",
  ],
]
`;

exports[`loader issue #1033 (2): warnings 1`] = `[]`;

exports[`loader issue #1033: errors 1`] = `[]`;

exports[`loader issue #1033: module 1`] = `
"// Exports
"
`;

exports[`loader issue #1033: result 1`] = `{}`;

exports[`loader issue #1033: warnings 1`] = `[]`;

exports[`loader should not generate console.warn when plugins disabled and hideNothingWarning is "true": errors 1`] = `[]`;

exports[`loader should not generate console.warn when plugins disabled and hideNothingWarning is "true": module 1`] = `
"// Imports
import ___CSS_LOADER_API_NO_SOURCEMAP_IMPORT___ from "../../src/runtime/noSourceMaps.js";
import ___CSS_LOADER_API_IMPORT___ from "../../src/runtime/api.js";
var ___CSS_LOADER_EXPORT___ = ___CSS_LOADER_API_IMPORT___(___CSS_LOADER_API_NO_SOURCEMAP_IMPORT___);
// Module
___CSS_LOADER_EXPORT___.push([module.id, \`\`, ""]);
// Exports
export default ___CSS_LOADER_EXPORT___;
"
`;

exports[`loader should not generate console.warn when plugins disabled and hideNothingWarning is "true": result 1`] = `
[
  [
    "./empty.css",
    "",
    "",
  ],
]
`;

exports[`loader should not generate console.warn when plugins disabled and hideNothingWarning is "true": warnings 1`] = `[]`;

exports[`loader should pass queries to other loader: errors 1`] = `[]`;

exports[`loader should pass queries to other loader: module 1`] = `
"// Imports
import ___CSS_LOADER_API_NO_SOURCEMAP_IMPORT___ from "../../src/runtime/noSourceMaps.js";
import ___CSS_LOADER_API_IMPORT___ from "../../src/runtime/api.js";
import ___CSS_LOADER_GET_URL_IMPORT___ from "../../src/runtime/getUrl.js";
var ___CSS_LOADER_URL_IMPORT_0___ = new URL("./url/image.svg?color=%23BAAFDB%3F", import.meta.url);
var ___CSS_LOADER_EXPORT___ = ___CSS_LOADER_API_IMPORT___(___CSS_LOADER_API_NO_SOURCEMAP_IMPORT___);
var ___CSS_LOADER_URL_REPLACEMENT_0___ = ___CSS_LOADER_GET_URL_IMPORT___(___CSS_LOADER_URL_IMPORT_0___, { hash: "#foo" });
// Module
___CSS_LOADER_EXPORT___.push([module.id, \`.example {
    background-image: url(\${___CSS_LOADER_URL_REPLACEMENT_0___});
}
\`, ""]);
// Exports
export default ___CSS_LOADER_EXPORT___;
"
`;

exports[`loader should pass queries to other loader: result 1`] = `
[
  [
    "./other-loader-query.css",
    ".example {
    background-image: url(replaced_file_protocol_/webpack/public/path/image.svg#foo);
}
",
    "",
  ],
]
`;

exports[`loader should pass queries to other loader: warnings 1`] = `[]`;

exports[`loader should reuse \`ast\` from "postcss-loader": errors 1`] = `[]`;

exports[`loader should reuse \`ast\` from "postcss-loader": module 1`] = `
"// Imports
import ___CSS_LOADER_API_NO_SOURCEMAP_IMPORT___ from "../../../src/runtime/noSourceMaps.js";
import ___CSS_LOADER_API_IMPORT___ from "../../../src/runtime/api.js";
import ___CSS_LOADER_GET_URL_IMPORT___ from "../../../src/runtime/getUrl.js";
var ___CSS_LOADER_URL_IMPORT_0___ = new URL("./img1x.png", import.meta.url);
var ___CSS_LOADER_URL_IMPORT_1___ = new URL("./img2x.png", import.meta.url);
var ___CSS_LOADER_EXPORT___ = ___CSS_LOADER_API_IMPORT___(___CSS_LOADER_API_NO_SOURCEMAP_IMPORT___);
var ___CSS_LOADER_URL_REPLACEMENT_0___ = ___CSS_LOADER_GET_URL_IMPORT___(___CSS_LOADER_URL_IMPORT_0___);
var ___CSS_LOADER_URL_REPLACEMENT_1___ = ___CSS_LOADER_GET_URL_IMPORT___(___CSS_LOADER_URL_IMPORT_1___);
// Module
___CSS_LOADER_EXPORT___.push([module.id, \`:root {
  --fontSize: 1rem;
  --mainColor: rgba(18,52,86,0.47059);
  --secondaryColor: rgba(102, 51, 153, 0.9);
}

html {
  overflow-x: hidden;
  overflow-y: auto;
  overflow: hidden auto;
}

@media (max-width: 50rem) {
  body {
    color: rgba(18,52,86,0.47059);
    color: var(--mainColor);
    font-family: system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, sans-serif;
    font-size: 1rem;
    font-size: var(--fontSize);
    line-height: calc(1rem * 1.5);
    line-height: calc(var(--fontSize) * 1.5);
    word-wrap: break-word;
    padding-left: calc(1rem / 2 + 1px);
    padding-right: calc(1rem / 2 + 1px);
    padding-left: calc(var(--fontSize) / 2 + 1px);
    padding-right: calc(var(--fontSize) / 2 + 1px);
  }
}

h1, h2, h3, h4, h5, h6 {
  margin-top: 0;
  margin-bottom: 0;
}

.hero:matches(main, .main) {
  background-image: url(\${___CSS_LOADER_URL_REPLACEMENT_0___});
  background-image: -webkit-image-set(url(\${___CSS_LOADER_URL_REPLACEMENT_0___}) 1x, url(\${___CSS_LOADER_URL_REPLACEMENT_1___}) 2x);
  background-image: image-set(url(\${___CSS_LOADER_URL_REPLACEMENT_0___}) 1x, url(\${___CSS_LOADER_URL_REPLACEMENT_1___}) 2x);
}

@media (min-resolution: 192dpi) {

.hero:matches(main, .main) {
  background-image: url(\${___CSS_LOADER_URL_REPLACEMENT_1___});
}
}

a {
  color: rgba(0, 0, 255, 0.9);
}

a:hover {
    color: #639;
  }
\`, ""]);
// Exports
export default ___CSS_LOADER_EXPORT___;
"
`;

exports[`loader should reuse \`ast\` from "postcss-loader": result 1`] = `
[
  [
    "./postcss-present-env/source.css",
    ":root {
  --fontSize: 1rem;
  --mainColor: rgba(18,52,86,0.47059);
  --secondaryColor: rgba(102, 51, 153, 0.9);
}

html {
  overflow-x: hidden;
  overflow-y: auto;
  overflow: hidden auto;
}

@media (max-width: 50rem) {
  body {
    color: rgba(18,52,86,0.47059);
    color: var(--mainColor);
    font-family: system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, sans-serif;
    font-size: 1rem;
    font-size: var(--fontSize);
    line-height: calc(1rem * 1.5);
    line-height: calc(var(--fontSize) * 1.5);
    word-wrap: break-word;
    padding-left: calc(1rem / 2 + 1px);
    padding-right: calc(1rem / 2 + 1px);
    padding-left: calc(var(--fontSize) / 2 + 1px);
    padding-right: calc(var(--fontSize) / 2 + 1px);
  }
}

h1, h2, h3, h4, h5, h6 {
  margin-top: 0;
  margin-bottom: 0;
}

.hero:matches(main, .main) {
  background-image: url(replaced_file_protocol_/webpack/public/path/img1x.png);
  background-image: -webkit-image-set(url(replaced_file_protocol_/webpack/public/path/img1x.png) 1x, url(replaced_file_protocol_/webpack/public/path/img2x.png) 2x);
  background-image: image-set(url(replaced_file_protocol_/webpack/public/path/img1x.png) 1x, url(replaced_file_protocol_/webpack/public/path/img2x.png) 2x);
}

@media (min-resolution: 192dpi) {

.hero:matches(main, .main) {
  background-image: url(replaced_file_protocol_/webpack/public/path/img2x.png);
}
}

a {
  color: rgba(0, 0, 255, 0.9);
}

a:hover {
    color: #639;
  }
",
    "",
  ],
]
`;

exports[`loader should reuse \`ast\` from "postcss-loader": warnings 1`] = `[]`;

exports[`loader should throw an error on invisible spaces: errors 1`] = `
[
  "ModuleBuildError: Module build failed (from \`replaced original path\`):

SyntaxError

(1:8) /test/fixtures/invisible-space.css Unknown word color

> 1 | a {    color: red;    }
    |        ^
",
]
`;

exports[`loader should throw an error on invisible spaces: warnings 1`] = `[]`;

exports[`loader should throw error on invalid css syntax: errors 1`] = `
[
  "ModuleBuildError: Module build failed (from \`replaced original path\`):

SyntaxError

(2:3) /test/fixtures/error.css Unknown word invalid

  1 | .some {
> 2 |   invalid css;
    |   ^
  3 | }
  4 | 
",
]
`;

exports[`loader should throw error on invalid css syntax: warnings 1`] = `[]`;

exports[`loader should throws error when no loader(s) for assets: errors 1`] = `[]`;

exports[`loader should throws error when no loader(s) for assets: warnings 1`] = `[]`;

exports[`loader should work and nothing to do with built-in CSS support: errors 1`] = `[]`;

exports[`loader should work and nothing to do with built-in CSS support: errors 2`] = `[]`;

exports[`loader should work and nothing to do with built-in CSS support: module 1`] = `
"@charset "UTF-8";


/* Comment */

.class {
  color: red;
  background: url("./url/img.png");
}

.class-duplicate-url {
  background: url("./url/img.png");
}

:root {
  --foo: 1px;
  --bar: 2px;
}

.class { a: b c d; }

.two {}

.u-m\\+ { a: b c d; }

.class { content: "\\F10C" }

@media only screen and (max-width: 600px) {
  body {
    background-color: lightblue;
  }
}

.class {
  content: "\\2193";
  content: "\\2193\\2193";
  content: "\\2193 \\2193";
  content: "\\2193\\2193\\2193";
  content: "\\2193 \\2193 \\2193";
}

.-top {}
.\\-top {}

#\\#test {}

.grid {
  display: flex;
  flex-wrap: wrap;
}
.grid.\\-top {
  align-items: flex-start;
}
.grid.-top {
  align-items: flex-start;
}
.grid.\\-middle {
  align-items: center;
}
.grid.\\-bottom {
  align-items: flex-end;
}

.u-m\\00002b {}

.u-m00002b {}

#u-m\\+ {}

body {
  font-family: '微软雅黑'; /* some chinese font name */
}

.myStyle {
  content: '\\e901';
}

.myStyle {
  content: '\\E901';
}

.♫ {}

.\\3A \\\`\\( {} /* matches elements with class=":\`(" */
.\\31 a2b3c {} /* matches elements with class="1a2b3c" */
#\\#fake-id {} /* matches the element with id="#fake-id" */
#-a-b-c- {} /* matches the element with id="-a-b-c-" */
#© {} /* matches the element with id="©" */

\\.\\\` {
 color: aliceblue;
}

\\.\\$\\{foo\\} {
  color: aliceblue;
}

/* \` */
/* \`\` */
/* \`\`\` */
/* \${} */
/* \\\\\` */

:root {
  --title-align: center;
  --sr-only: {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
    clip-path: inset(50%);
    border: 0;
  };
}

.test {
  content: "\\2014\\A0";
  content: "\\2014 \\A0";
  content: "\\A0 \\2014";
  content: "\\A0\\2014";
  margin-top: 1px\\9;
  background-color: #000\\9;
}

.light.on .bulb:before{
  content: '💡';
}

.base64 {
  background: url(data:img/jpg;base64,iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAhxJREFUSA3tk71rU1EYxnMTEoJUkowWwdJ2akEHBfGjCiIF6ZylVUKSm2TqZLGI+A/oIu2UXm8C4lAyF4SWji0tdFLo1Eo7VN0SaBEhH7e/Nz0nPTfGOjiaCyfPc5734zlfCQT6X/8E/vUErL81KBaL9y3LSnued5PcITjUOwR3gsFg2bbtjYt6/NGgXC4P1et1l2aPLmpAbD0SidjpdPqgV15PA9d17zQajU8UxHQRK/4G35Q5pveAK8LlI1ZjPMnlcltnyvnvbwaO41xvtVqy7YHztMACq5xnlb9EY3dRdvcGo1kj5wR+t1AofDG0gM+A875E8DNjRCexsrV8Pj9ZqVQitVrtqejxePxjMpmss5hVTB4buXvMb2DyU2tBTRS+BjvNlVYUpPl7iuVO3Gq1uoQx1FtSOW1gPgp5ZWrdBtNmUDgv5asgxQ8F1af5vhY0YjyjuWC3wTszKJz7GBOkcFlQfW2ONq4FjWi+Hj6DRCKxQOK2TlY4x92EuYd5dvMAbYIzfikau3pu5tJ8KxaLLfo0cyKci7tK4TZjUMcoXAmHwzle0Q/RaC5P1GFMyVx9R9Fo9HYqlTrSgqDvFelAqVQa5hmuMR/WGtjAaBdjwBoDQ0ZsnwVMZjKZ9n0Zem8DSeDPdrnZbL6F2l3NOvUYNZk4oVDoRTabPe4EDNJzB0ZcjAYxeoZ2i3FNxQ7BHYw/cB/fldaH//UETgHHO8S44KbfXgAAAABJRU5ErkJggg==);
}

a[href=''] {
  color: red;
}

a[href='' i] {
  color: red;
}

a[href=""] {
  color: blue;
}

a[href="" i] {
  color: blue;
}
"
`;

exports[`loader should work and nothing to do with built-in CSS support: module 2`] = `
"@charset "UTF-8";


/* Comment */

.class {
  color: red;
  background: url("./url/img.png");
}

.class-duplicate-url {
  background: url("./url/img.png");
}

:root {
  --foo: 1px;
  --bar: 2px;
}

.class { a: b c d; }

.two {}

.u-m\\+ { a: b c d; }

.class { content: "\\F10C" }

@media only screen and (max-width: 600px) {
  body {
    background-color: lightblue;
  }
}

.class {
  content: "\\2193";
  content: "\\2193\\2193";
  content: "\\2193 \\2193";
  content: "\\2193\\2193\\2193";
  content: "\\2193 \\2193 \\2193";
}

.-top {}
.\\-top {}

#\\#test {}

.grid {
  display: flex;
  flex-wrap: wrap;
}
.grid.\\-top {
  align-items: flex-start;
}
.grid.-top {
  align-items: flex-start;
}
.grid.\\-middle {
  align-items: center;
}
.grid.\\-bottom {
  align-items: flex-end;
}

.u-m\\00002b {}

.u-m00002b {}

#u-m\\+ {}

body {
  font-family: '微软雅黑'; /* some chinese font name */
}

.myStyle {
  content: '\\e901';
}

.myStyle {
  content: '\\E901';
}

.♫ {}

.\\3A \\\`\\( {} /* matches elements with class=":\`(" */
.\\31 a2b3c {} /* matches elements with class="1a2b3c" */
#\\#fake-id {} /* matches the element with id="#fake-id" */
#-a-b-c- {} /* matches the element with id="-a-b-c-" */
#© {} /* matches the element with id="©" */

\\.\\\` {
 color: aliceblue;
}

\\.\\$\\{foo\\} {
  color: aliceblue;
}

/* \` */
/* \`\` */
/* \`\`\` */
/* \${} */
/* \\\\\` */

:root {
  --title-align: center;
  --sr-only: {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
    clip-path: inset(50%);
    border: 0;
  };
}

.test {
  content: "\\2014\\A0";
  content: "\\2014 \\A0";
  content: "\\A0 \\2014";
  content: "\\A0\\2014";
  margin-top: 1px\\9;
  background-color: #000\\9;
}

.light.on .bulb:before{
  content: '💡';
}

.base64 {
  background: url(data:img/jpg;base64,iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAhxJREFUSA3tk71rU1EYxnMTEoJUkowWwdJ2akEHBfGjCiIF6ZylVUKSm2TqZLGI+A/oIu2UXm8C4lAyF4SWji0tdFLo1Eo7VN0SaBEhH7e/Nz0nPTfGOjiaCyfPc5734zlfCQT6X/8E/vUErL81KBaL9y3LSnued5PcITjUOwR3gsFg2bbtjYt6/NGgXC4P1et1l2aPLmpAbD0SidjpdPqgV15PA9d17zQajU8UxHQRK/4G35Q5pveAK8LlI1ZjPMnlcltnyvnvbwaO41xvtVqy7YHztMACq5xnlb9EY3dRdvcGo1kj5wR+t1AofDG0gM+A875E8DNjRCexsrV8Pj9ZqVQitVrtqejxePxjMpmss5hVTB4buXvMb2DyU2tBTRS+BjvNlVYUpPl7iuVO3Gq1uoQx1FtSOW1gPgp5ZWrdBtNmUDgv5asgxQ8F1af5vhY0YjyjuWC3wTszKJz7GBOkcFlQfW2ONq4FjWi+Hj6DRCKxQOK2TlY4x92EuYd5dvMAbYIzfikau3pu5tJ8KxaLLfo0cyKci7tK4TZjUMcoXAmHwzle0Q/RaC5P1GFMyVx9R9Fo9HYqlTrSgqDvFelAqVQa5hmuMR/WGtjAaBdjwBoDQ0ZsnwVMZjKZ9n0Zem8DSeDPdrnZbL6F2l3NOvUYNZk4oVDoRTabPe4EDNJzB0ZcjAYxeoZ2i3FNxQ7BHYw/cB/fldaH//UETgHHO8S44KbfXgAAAABJRU5ErkJggg==);
}

a[href=''] {
  color: red;
}

a[href='' i] {
  color: red;
}

a[href=""] {
  color: blue;
}

a[href="" i] {
  color: blue;
}
"
`;

exports[`loader should work and nothing to do with built-in CSS support: warnings 1`] = `
[
  "ModuleWarning: Module Warning (from \`replaced original path\`):
You can't use \`experiments.css\` (\`experiments.futureDefaults\` enable built-in CSS support by default) and \`css-loader\` together, please set \`experiments.css\` to \`false\` or set \`{ type: "javascript/auto" }\` for rules with \`css-loader\` in your webpack config (now css-loader does nothing).",
]
`;

exports[`loader should work and nothing to do with built-in CSS support: warnings 2`] = `
[
  "ModuleWarning: Module Warning (from \`replaced original path\`):
You can't use \`experiments.css\` (\`experiments.futureDefaults\` enable built-in CSS support by default) and \`css-loader\` together, please set \`experiments.css\` to \`false\` or set \`{ type: "javascript/auto" }\` for rules with \`css-loader\` in your webpack config (now css-loader does nothing).",
]
`;

exports[`loader should work in 'production' mode: errors 1`] = `[]`;

exports[`loader should work in 'production' mode: module 1`] = `
"// Imports
import ___CSS_LOADER_API_NO_SOURCEMAP_IMPORT___ from "../../src/runtime/noSourceMaps.js";
import ___CSS_LOADER_API_IMPORT___ from "../../src/runtime/api.js";
import ___CSS_LOADER_GET_URL_IMPORT___ from "../../src/runtime/getUrl.js";
var ___CSS_LOADER_URL_IMPORT_0___ = new URL("./url/img.png", import.meta.url);
var ___CSS_LOADER_URL_IMPORT_1___ = new URL("data:img/jpg;base64,iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAhxJREFUSA3tk71rU1EYxnMTEoJUkowWwdJ2akEHBfGjCiIF6ZylVUKSm2TqZLGI+A/oIu2UXm8C4lAyF4SWji0tdFLo1Eo7VN0SaBEhH7e/Nz0nPTfGOjiaCyfPc5734zlfCQT6X/8E/vUErL81KBaL9y3LSnued5PcITjUOwR3gsFg2bbtjYt6/NGgXC4P1et1l2aPLmpAbD0SidjpdPqgV15PA9d17zQajU8UxHQRK/4G35Q5pveAK8LlI1ZjPMnlcltnyvnvbwaO41xvtVqy7YHztMACq5xnlb9EY3dRdvcGo1kj5wR+t1AofDG0gM+A875E8DNjRCexsrV8Pj9ZqVQitVrtqejxePxjMpmss5hVTB4buXvMb2DyU2tBTRS+BjvNlVYUpPl7iuVO3Gq1uoQx1FtSOW1gPgp5ZWrdBtNmUDgv5asgxQ8F1af5vhY0YjyjuWC3wTszKJz7GBOkcFlQfW2ONq4FjWi+Hj6DRCKxQOK2TlY4x92EuYd5dvMAbYIzfikau3pu5tJ8KxaLLfo0cyKci7tK4TZjUMcoXAmHwzle0Q/RaC5P1GFMyVx9R9Fo9HYqlTrSgqDvFelAqVQa5hmuMR/WGtjAaBdjwBoDQ0ZsnwVMZjKZ9n0Zem8DSeDPdrnZbL6F2l3NOvUYNZk4oVDoRTabPe4EDNJzB0ZcjAYxeoZ2i3FNxQ7BHYw/cB/fldaH//UETgHHO8S44KbfXgAAAABJRU5ErkJggg==", import.meta.url);
var ___CSS_LOADER_EXPORT___ = ___CSS_LOADER_API_IMPORT___(___CSS_LOADER_API_NO_SOURCEMAP_IMPORT___);
var ___CSS_LOADER_URL_REPLACEMENT_0___ = ___CSS_LOADER_GET_URL_IMPORT___(___CSS_LOADER_URL_IMPORT_0___);
var ___CSS_LOADER_URL_REPLACEMENT_1___ = ___CSS_LOADER_GET_URL_IMPORT___(___CSS_LOADER_URL_IMPORT_1___);
// Module
___CSS_LOADER_EXPORT___.push([module.id, \`@charset "UTF-8";


/* Comment */

.class {
  color: red;
  background: url(\${___CSS_LOADER_URL_REPLACEMENT_0___});
}

.class-duplicate-url {
  background: url(\${___CSS_LOADER_URL_REPLACEMENT_0___});
}

:root {
  --foo: 1px;
  --bar: 2px;
}

.class { a: b c d; }

.two {}

.u-m\\\\+ { a: b c d; }

.class { content: "\\\\F10C" }

@media only screen and (max-width: 600px) {
  body {
    background-color: lightblue;
  }
}

.class {
  content: "\\\\2193";
  content: "\\\\2193\\\\2193";
  content: "\\\\2193 \\\\2193";
  content: "\\\\2193\\\\2193\\\\2193";
  content: "\\\\2193 \\\\2193 \\\\2193";
}

.-top {}
.\\\\-top {}

#\\\\#test {}

.grid {
  display: flex;
  flex-wrap: wrap;
}
.grid.\\\\-top {
  align-items: flex-start;
}
.grid.-top {
  align-items: flex-start;
}
.grid.\\\\-middle {
  align-items: center;
}
.grid.\\\\-bottom {
  align-items: flex-end;
}

.u-m\\\\00002b {}

.u-m00002b {}

#u-m\\\\+ {}

body {
  font-family: '微软雅黑'; /* some chinese font name */
}

.myStyle {
  content: '\\\\e901';
}

.myStyle {
  content: '\\\\E901';
}

.♫ {}

.\\\\3A \\\\\\\`\\\\( {} /* matches elements with class=":\\\`(" */
.\\\\31 a2b3c {} /* matches elements with class="1a2b3c" */
#\\\\#fake-id {} /* matches the element with id="#fake-id" */
#-a-b-c- {} /* matches the element with id="-a-b-c-" */
#© {} /* matches the element with id="©" */

\\\\.\\\\\\\` {
 color: aliceblue;
}

\\\\.\\\\\\$\\\\{foo\\\\} {
  color: aliceblue;
}

/* \\\` */
/* \\\`\\\` */
/* \\\`\\\`\\\` */
/* \\\${} */
/* \\\\\\\\\\\` */

:root {
  --title-align: center;
  --sr-only: {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
    clip-path: inset(50%);
    border: 0;
  };
}

.test {
  content: "\\\\2014\\\\A0";
  content: "\\\\2014 \\\\A0";
  content: "\\\\A0 \\\\2014";
  content: "\\\\A0\\\\2014";
  margin-top: 1px\\\\9;
  background-color: #000\\\\9;
}

.light.on .bulb:before{
  content: '💡';
}

.base64 {
  background: url(\${___CSS_LOADER_URL_REPLACEMENT_1___});
}

a[href=''] {
  color: red;
}

a[href='' i] {
  color: red;
}

a[href=""] {
  color: blue;
}

a[href="" i] {
  color: blue;
}
\`, ""]);
// Exports
export default ___CSS_LOADER_EXPORT___;
"
`;

exports[`loader should work in 'production' mode: result 1`] = `
[
  [
    501,
    "@charset "UTF-8";


/* Comment */

.class {
  color: red;
  background: url(replaced_file_protocol_/webpack/public/path/img.png);
}

.class-duplicate-url {
  background: url(replaced_file_protocol_/webpack/public/path/img.png);
}

:root {
  --foo: 1px;
  --bar: 2px;
}

.class { a: b c d; }

.two {}

.u-m\\+ { a: b c d; }

.class { content: "\\F10C" }

@media only screen and (max-width: 600px) {
  body {
    background-color: lightblue;
  }
}

.class {
  content: "\\2193";
  content: "\\2193\\2193";
  content: "\\2193 \\2193";
  content: "\\2193\\2193\\2193";
  content: "\\2193 \\2193 \\2193";
}

.-top {}
.\\-top {}

#\\#test {}

.grid {
  display: flex;
  flex-wrap: wrap;
}
.grid.\\-top {
  align-items: flex-start;
}
.grid.-top {
  align-items: flex-start;
}
.grid.\\-middle {
  align-items: center;
}
.grid.\\-bottom {
  align-items: flex-end;
}

.u-m\\00002b {}

.u-m00002b {}

#u-m\\+ {}

body {
  font-family: '微软雅黑'; /* some chinese font name */
}

.myStyle {
  content: '\\e901';
}

.myStyle {
  content: '\\E901';
}

.♫ {}

.\\3A \\\`\\( {} /* matches elements with class=":\`(" */
.\\31 a2b3c {} /* matches elements with class="1a2b3c" */
#\\#fake-id {} /* matches the element with id="#fake-id" */
#-a-b-c- {} /* matches the element with id="-a-b-c-" */
#© {} /* matches the element with id="©" */

\\.\\\` {
 color: aliceblue;
}

\\.\\$\\{foo\\} {
  color: aliceblue;
}

/* \` */
/* \`\` */
/* \`\`\` */
/* \${} */
/* \\\\\` */

:root {
  --title-align: center;
  --sr-only: {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
    clip-path: inset(50%);
    border: 0;
  };
}

.test {
  content: "\\2014\\A0";
  content: "\\2014 \\A0";
  content: "\\A0 \\2014";
  content: "\\A0\\2014";
  margin-top: 1px\\9;
  background-color: #000\\9;
}

.light.on .bulb:before{
  content: '💡';
}

.base64 {
  background: url(data:img/jpg;base64,iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAhxJREFUSA3tk71rU1EYxnMTEoJUkowWwdJ2akEHBfGjCiIF6ZylVUKSm2TqZLGI+A/oIu2UXm8C4lAyF4SWji0tdFLo1Eo7VN0SaBEhH7e/Nz0nPTfGOjiaCyfPc5734zlfCQT6X/8E/vUErL81KBaL9y3LSnued5PcITjUOwR3gsFg2bbtjYt6/NGgXC4P1et1l2aPLmpAbD0SidjpdPqgV15PA9d17zQajU8UxHQRK/4G35Q5pveAK8LlI1ZjPMnlcltnyvnvbwaO41xvtVqy7YHztMACq5xnlb9EY3dRdvcGo1kj5wR+t1AofDG0gM+A875E8DNjRCexsrV8Pj9ZqVQitVrtqejxePxjMpmss5hVTB4buXvMb2DyU2tBTRS+BjvNlVYUpPl7iuVO3Gq1uoQx1FtSOW1gPgp5ZWrdBtNmUDgv5asgxQ8F1af5vhY0YjyjuWC3wTszKJz7GBOkcFlQfW2ONq4FjWi+Hj6DRCKxQOK2TlY4x92EuYd5dvMAbYIzfikau3pu5tJ8KxaLLfo0cyKci7tK4TZjUMcoXAmHwzle0Q/RaC5P1GFMyVx9R9Fo9HYqlTrSgqDvFelAqVQa5hmuMR/WGtjAaBdjwBoDQ0ZsnwVMZjKZ9n0Zem8DSeDPdrnZbL6F2l3NOvUYNZk4oVDoRTabPe4EDNJzB0ZcjAYxeoZ2i3FNxQ7BHYw/cB/fldaH//UETgHHO8S44KbfXgAAAABJRU5ErkJggg==);
}

a[href=''] {
  color: red;
}

a[href='' i] {
  color: red;
}

a[href=""] {
  color: blue;
}

a[href="" i] {
  color: blue;
}
",
    "",
  ],
]
`;

exports[`loader should work in 'production' mode: warnings 1`] = `[]`;

exports[`loader should work with "asset" module type: errors 1`] = `[]`;

exports[`loader should work with "asset" module type: module 1`] = `
"// Imports
import ___CSS_LOADER_API_NO_SOURCEMAP_IMPORT___ from "../../src/runtime/noSourceMaps.js";
import ___CSS_LOADER_API_IMPORT___ from "../../src/runtime/api.js";
import ___CSS_LOADER_GET_URL_IMPORT___ from "../../src/runtime/getUrl.js";
var ___CSS_LOADER_URL_IMPORT_0___ = new URL("./url/img.png", import.meta.url);
var ___CSS_LOADER_URL_IMPORT_1___ = new URL("data:img/jpg;base64,iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAhxJREFUSA3tk71rU1EYxnMTEoJUkowWwdJ2akEHBfGjCiIF6ZylVUKSm2TqZLGI+A/oIu2UXm8C4lAyF4SWji0tdFLo1Eo7VN0SaBEhH7e/Nz0nPTfGOjiaCyfPc5734zlfCQT6X/8E/vUErL81KBaL9y3LSnued5PcITjUOwR3gsFg2bbtjYt6/NGgXC4P1et1l2aPLmpAbD0SidjpdPqgV15PA9d17zQajU8UxHQRK/4G35Q5pveAK8LlI1ZjPMnlcltnyvnvbwaO41xvtVqy7YHztMACq5xnlb9EY3dRdvcGo1kj5wR+t1AofDG0gM+A875E8DNjRCexsrV8Pj9ZqVQitVrtqejxePxjMpmss5hVTB4buXvMb2DyU2tBTRS+BjvNlVYUpPl7iuVO3Gq1uoQx1FtSOW1gPgp5ZWrdBtNmUDgv5asgxQ8F1af5vhY0YjyjuWC3wTszKJz7GBOkcFlQfW2ONq4FjWi+Hj6DRCKxQOK2TlY4x92EuYd5dvMAbYIzfikau3pu5tJ8KxaLLfo0cyKci7tK4TZjUMcoXAmHwzle0Q/RaC5P1GFMyVx9R9Fo9HYqlTrSgqDvFelAqVQa5hmuMR/WGtjAaBdjwBoDQ0ZsnwVMZjKZ9n0Zem8DSeDPdrnZbL6F2l3NOvUYNZk4oVDoRTabPe4EDNJzB0ZcjAYxeoZ2i3FNxQ7BHYw/cB/fldaH//UETgHHO8S44KbfXgAAAABJRU5ErkJggg==", import.meta.url);
var ___CSS_LOADER_EXPORT___ = ___CSS_LOADER_API_IMPORT___(___CSS_LOADER_API_NO_SOURCEMAP_IMPORT___);
var ___CSS_LOADER_URL_REPLACEMENT_0___ = ___CSS_LOADER_GET_URL_IMPORT___(___CSS_LOADER_URL_IMPORT_0___);
var ___CSS_LOADER_URL_REPLACEMENT_1___ = ___CSS_LOADER_GET_URL_IMPORT___(___CSS_LOADER_URL_IMPORT_1___);
// Module
___CSS_LOADER_EXPORT___.push([module.id, \`@charset "UTF-8";


/* Comment */

.class {
  color: red;
  background: url(\${___CSS_LOADER_URL_REPLACEMENT_0___});
}

.class-duplicate-url {
  background: url(\${___CSS_LOADER_URL_REPLACEMENT_0___});
}

:root {
  --foo: 1px;
  --bar: 2px;
}

.class { a: b c d; }

.two {}

.u-m\\\\+ { a: b c d; }

.class { content: "\\\\F10C" }

@media only screen and (max-width: 600px) {
  body {
    background-color: lightblue;
  }
}

.class {
  content: "\\\\2193";
  content: "\\\\2193\\\\2193";
  content: "\\\\2193 \\\\2193";
  content: "\\\\2193\\\\2193\\\\2193";
  content: "\\\\2193 \\\\2193 \\\\2193";
}

.-top {}
.\\\\-top {}

#\\\\#test {}

.grid {
  display: flex;
  flex-wrap: wrap;
}
.grid.\\\\-top {
  align-items: flex-start;
}
.grid.-top {
  align-items: flex-start;
}
.grid.\\\\-middle {
  align-items: center;
}
.grid.\\\\-bottom {
  align-items: flex-end;
}

.u-m\\\\00002b {}

.u-m00002b {}

#u-m\\\\+ {}

body {
  font-family: '微软雅黑'; /* some chinese font name */
}

.myStyle {
  content: '\\\\e901';
}

.myStyle {
  content: '\\\\E901';
}

.♫ {}

.\\\\3A \\\\\\\`\\\\( {} /* matches elements with class=":\\\`(" */
.\\\\31 a2b3c {} /* matches elements with class="1a2b3c" */
#\\\\#fake-id {} /* matches the element with id="#fake-id" */
#-a-b-c- {} /* matches the element with id="-a-b-c-" */
#© {} /* matches the element with id="©" */

\\\\.\\\\\\\` {
 color: aliceblue;
}

\\\\.\\\\\\$\\\\{foo\\\\} {
  color: aliceblue;
}

/* \\\` */
/* \\\`\\\` */
/* \\\`\\\`\\\` */
/* \\\${} */
/* \\\\\\\\\\\` */

:root {
  --title-align: center;
  --sr-only: {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
    clip-path: inset(50%);
    border: 0;
  };
}

.test {
  content: "\\\\2014\\\\A0";
  content: "\\\\2014 \\\\A0";
  content: "\\\\A0 \\\\2014";
  content: "\\\\A0\\\\2014";
  margin-top: 1px\\\\9;
  background-color: #000\\\\9;
}

.light.on .bulb:before{
  content: '💡';
}

.base64 {
  background: url(\${___CSS_LOADER_URL_REPLACEMENT_1___});
}

a[href=''] {
  color: red;
}

a[href='' i] {
  color: red;
}

a[href=""] {
  color: blue;
}

a[href="" i] {
  color: blue;
}
\`, ""]);
// Exports
export default ___CSS_LOADER_EXPORT___;
"
`;

exports[`loader should work with "asset" module type: result 1`] = `
[
  [
    "./basic.css",
    "@charset "UTF-8";


/* Comment */

.class {
  color: red;
  background: url(replaced_file_protocol_/webpack/public/path/img.png);
}

.class-duplicate-url {
  background: url(replaced_file_protocol_/webpack/public/path/img.png);
}

:root {
  --foo: 1px;
  --bar: 2px;
}

.class { a: b c d; }

.two {}

.u-m\\+ { a: b c d; }

.class { content: "\\F10C" }

@media only screen and (max-width: 600px) {
  body {
    background-color: lightblue;
  }
}

.class {
  content: "\\2193";
  content: "\\2193\\2193";
  content: "\\2193 \\2193";
  content: "\\2193\\2193\\2193";
  content: "\\2193 \\2193 \\2193";
}

.-top {}
.\\-top {}

#\\#test {}

.grid {
  display: flex;
  flex-wrap: wrap;
}
.grid.\\-top {
  align-items: flex-start;
}
.grid.-top {
  align-items: flex-start;
}
.grid.\\-middle {
  align-items: center;
}
.grid.\\-bottom {
  align-items: flex-end;
}

.u-m\\00002b {}

.u-m00002b {}

#u-m\\+ {}

body {
  font-family: '微软雅黑'; /* some chinese font name */
}

.myStyle {
  content: '\\e901';
}

.myStyle {
  content: '\\E901';
}

.♫ {}

.\\3A \\\`\\( {} /* matches elements with class=":\`(" */
.\\31 a2b3c {} /* matches elements with class="1a2b3c" */
#\\#fake-id {} /* matches the element with id="#fake-id" */
#-a-b-c- {} /* matches the element with id="-a-b-c-" */
#© {} /* matches the element with id="©" */

\\.\\\` {
 color: aliceblue;
}

\\.\\$\\{foo\\} {
  color: aliceblue;
}

/* \` */
/* \`\` */
/* \`\`\` */
/* \${} */
/* \\\\\` */

:root {
  --title-align: center;
  --sr-only: {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
    clip-path: inset(50%);
    border: 0;
  };
}

.test {
  content: "\\2014\\A0";
  content: "\\2014 \\A0";
  content: "\\A0 \\2014";
  content: "\\A0\\2014";
  margin-top: 1px\\9;
  background-color: #000\\9;
}

.light.on .bulb:before{
  content: '💡';
}

.base64 {
  background: url(data:img/jpg;base64,iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAhxJREFUSA3tk71rU1EYxnMTEoJUkowWwdJ2akEHBfGjCiIF6ZylVUKSm2TqZLGI+A/oIu2UXm8C4lAyF4SWji0tdFLo1Eo7VN0SaBEhH7e/Nz0nPTfGOjiaCyfPc5734zlfCQT6X/8E/vUErL81KBaL9y3LSnued5PcITjUOwR3gsFg2bbtjYt6/NGgXC4P1et1l2aPLmpAbD0SidjpdPqgV15PA9d17zQajU8UxHQRK/4G35Q5pveAK8LlI1ZjPMnlcltnyvnvbwaO41xvtVqy7YHztMACq5xnlb9EY3dRdvcGo1kj5wR+t1AofDG0gM+A875E8DNjRCexsrV8Pj9ZqVQitVrtqejxePxjMpmss5hVTB4buXvMb2DyU2tBTRS+BjvNlVYUpPl7iuVO3Gq1uoQx1FtSOW1gPgp5ZWrdBtNmUDgv5asgxQ8F1af5vhY0YjyjuWC3wTszKJz7GBOkcFlQfW2ONq4FjWi+Hj6DRCKxQOK2TlY4x92EuYd5dvMAbYIzfikau3pu5tJ8KxaLLfo0cyKci7tK4TZjUMcoXAmHwzle0Q/RaC5P1GFMyVx9R9Fo9HYqlTrSgqDvFelAqVQa5hmuMR/WGtjAaBdjwBoDQ0ZsnwVMZjKZ9n0Zem8DSeDPdrnZbL6F2l3NOvUYNZk4oVDoRTabPe4EDNJzB0ZcjAYxeoZ2i3FNxQ7BHYw/cB/fldaH//UETgHHO8S44KbfXgAAAABJRU5ErkJggg==);
}

a[href=''] {
  color: red;
}

a[href='' i] {
  color: red;
}

a[href=""] {
  color: blue;
}

a[href="" i] {
  color: blue;
}
",
    "",
  ],
]
`;

exports[`loader should work with "asset" module type: warnings 1`] = `[]`;

exports[`loader should work with "sass-loader": errors 1`] = `[]`;

exports[`loader should work with "sass-loader": module 1`] = `
"// Imports
import ___CSS_LOADER_API_NO_SOURCEMAP_IMPORT___ from "../../../src/runtime/noSourceMaps.js";
import ___CSS_LOADER_API_IMPORT___ from "../../../src/runtime/api.js";
var ___CSS_LOADER_EXPORT___ = ___CSS_LOADER_API_IMPORT___(___CSS_LOADER_API_NO_SOURCEMAP_IMPORT___);
// Module
___CSS_LOADER_EXPORT___.push([module.id, \`body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}\`, ""]);
// Exports
export default ___CSS_LOADER_EXPORT___;
"
`;

exports[`loader should work with "sass-loader": result 1`] = `
[
  [
    "./scss/source.scss",
    "body {
  font: 100% Helvetica, sans-serif;
  color: #333;
}",
    "",
  ],
]
`;

exports[`loader should work with "sass-loader": warnings 1`] = `
[
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Deprecation The legacy JS API is deprecated and will be removed in Dart Sass 2.0.0.

More info: https://sass-lang.com/d/legacy-js-api",
]
`;

exports[`loader should work with \`templateLiteral\` support: errors 1`] = `[]`;

exports[`loader should work with \`templateLiteral\` support: module 1`] = `
"// Imports
import ___CSS_LOADER_API_NO_SOURCEMAP_IMPORT___ from "../../src/runtime/noSourceMaps.js";
import ___CSS_LOADER_API_IMPORT___ from "../../src/runtime/api.js";
import ___CSS_LOADER_GET_URL_IMPORT___ from "../../src/runtime/getUrl.js";
var ___CSS_LOADER_URL_IMPORT_0___ = new URL("./url/img.png", import.meta.url);
var ___CSS_LOADER_URL_IMPORT_1___ = new URL("data:img/jpg;base64,iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAhxJREFUSA3tk71rU1EYxnMTEoJUkowWwdJ2akEHBfGjCiIF6ZylVUKSm2TqZLGI+A/oIu2UXm8C4lAyF4SWji0tdFLo1Eo7VN0SaBEhH7e/Nz0nPTfGOjiaCyfPc5734zlfCQT6X/8E/vUErL81KBaL9y3LSnued5PcITjUOwR3gsFg2bbtjYt6/NGgXC4P1et1l2aPLmpAbD0SidjpdPqgV15PA9d17zQajU8UxHQRK/4G35Q5pveAK8LlI1ZjPMnlcltnyvnvbwaO41xvtVqy7YHztMACq5xnlb9EY3dRdvcGo1kj5wR+t1AofDG0gM+A875E8DNjRCexsrV8Pj9ZqVQitVrtqejxePxjMpmss5hVTB4buXvMb2DyU2tBTRS+BjvNlVYUpPl7iuVO3Gq1uoQx1FtSOW1gPgp5ZWrdBtNmUDgv5asgxQ8F1af5vhY0YjyjuWC3wTszKJz7GBOkcFlQfW2ONq4FjWi+Hj6DRCKxQOK2TlY4x92EuYd5dvMAbYIzfikau3pu5tJ8KxaLLfo0cyKci7tK4TZjUMcoXAmHwzle0Q/RaC5P1GFMyVx9R9Fo9HYqlTrSgqDvFelAqVQa5hmuMR/WGtjAaBdjwBoDQ0ZsnwVMZjKZ9n0Zem8DSeDPdrnZbL6F2l3NOvUYNZk4oVDoRTabPe4EDNJzB0ZcjAYxeoZ2i3FNxQ7BHYw/cB/fldaH//UETgHHO8S44KbfXgAAAABJRU5ErkJggg==", import.meta.url);
var ___CSS_LOADER_EXPORT___ = ___CSS_LOADER_API_IMPORT___(___CSS_LOADER_API_NO_SOURCEMAP_IMPORT___);
var ___CSS_LOADER_URL_REPLACEMENT_0___ = ___CSS_LOADER_GET_URL_IMPORT___(___CSS_LOADER_URL_IMPORT_0___);
var ___CSS_LOADER_URL_REPLACEMENT_1___ = ___CSS_LOADER_GET_URL_IMPORT___(___CSS_LOADER_URL_IMPORT_1___);
// Module
___CSS_LOADER_EXPORT___.push([module.id, \`@charset "UTF-8";


/* Comment */

.class {
  color: red;
  background: url(\${___CSS_LOADER_URL_REPLACEMENT_0___});
}

.class-duplicate-url {
  background: url(\${___CSS_LOADER_URL_REPLACEMENT_0___});
}

:root {
  --foo: 1px;
  --bar: 2px;
}

.class { a: b c d; }

.two {}

.u-m\\\\+ { a: b c d; }

.class { content: "\\\\F10C" }

@media only screen and (max-width: 600px) {
  body {
    background-color: lightblue;
  }
}

.class {
  content: "\\\\2193";
  content: "\\\\2193\\\\2193";
  content: "\\\\2193 \\\\2193";
  content: "\\\\2193\\\\2193\\\\2193";
  content: "\\\\2193 \\\\2193 \\\\2193";
}

.-top {}
.\\\\-top {}

#\\\\#test {}

.grid {
  display: flex;
  flex-wrap: wrap;
}
.grid.\\\\-top {
  align-items: flex-start;
}
.grid.-top {
  align-items: flex-start;
}
.grid.\\\\-middle {
  align-items: center;
}
.grid.\\\\-bottom {
  align-items: flex-end;
}

.u-m\\\\00002b {}

.u-m00002b {}

#u-m\\\\+ {}

body {
  font-family: '微软雅黑'; /* some chinese font name */
}

.myStyle {
  content: '\\\\e901';
}

.myStyle {
  content: '\\\\E901';
}

.♫ {}

.\\\\3A \\\\\\\`\\\\( {} /* matches elements with class=":\\\`(" */
.\\\\31 a2b3c {} /* matches elements with class="1a2b3c" */
#\\\\#fake-id {} /* matches the element with id="#fake-id" */
#-a-b-c- {} /* matches the element with id="-a-b-c-" */
#© {} /* matches the element with id="©" */

\\\\.\\\\\\\` {
 color: aliceblue;
}

\\\\.\\\\\\$\\\\{foo\\\\} {
  color: aliceblue;
}

/* \\\` */
/* \\\`\\\` */
/* \\\`\\\`\\\` */
/* \\\${} */
/* \\\\\\\\\\\` */

:root {
  --title-align: center;
  --sr-only: {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
    clip-path: inset(50%);
    border: 0;
  };
}

.test {
  content: "\\\\2014\\\\A0";
  content: "\\\\2014 \\\\A0";
  content: "\\\\A0 \\\\2014";
  content: "\\\\A0\\\\2014";
  margin-top: 1px\\\\9;
  background-color: #000\\\\9;
}

.light.on .bulb:before{
  content: '💡';
}

.base64 {
  background: url(\${___CSS_LOADER_URL_REPLACEMENT_1___});
}

a[href=''] {
  color: red;
}

a[href='' i] {
  color: red;
}

a[href=""] {
  color: blue;
}

a[href="" i] {
  color: blue;
}
\`, ""]);
// Exports
export default ___CSS_LOADER_EXPORT___;
"
`;

exports[`loader should work with \`templateLiteral\` support: result 1`] = `
[
  [
    "./basic.css",
    "@charset "UTF-8";


/* Comment */

.class {
  color: red;
  background: url(replaced_file_protocol_/webpack/public/path/img.png);
}

.class-duplicate-url {
  background: url(replaced_file_protocol_/webpack/public/path/img.png);
}

:root {
  --foo: 1px;
  --bar: 2px;
}

.class { a: b c d; }

.two {}

.u-m\\+ { a: b c d; }

.class { content: "\\F10C" }

@media only screen and (max-width: 600px) {
  body {
    background-color: lightblue;
  }
}

.class {
  content: "\\2193";
  content: "\\2193\\2193";
  content: "\\2193 \\2193";
  content: "\\2193\\2193\\2193";
  content: "\\2193 \\2193 \\2193";
}

.-top {}
.\\-top {}

#\\#test {}

.grid {
  display: flex;
  flex-wrap: wrap;
}
.grid.\\-top {
  align-items: flex-start;
}
.grid.-top {
  align-items: flex-start;
}
.grid.\\-middle {
  align-items: center;
}
.grid.\\-bottom {
  align-items: flex-end;
}

.u-m\\00002b {}

.u-m00002b {}

#u-m\\+ {}

body {
  font-family: '微软雅黑'; /* some chinese font name */
}

.myStyle {
  content: '\\e901';
}

.myStyle {
  content: '\\E901';
}

.♫ {}

.\\3A \\\`\\( {} /* matches elements with class=":\`(" */
.\\31 a2b3c {} /* matches elements with class="1a2b3c" */
#\\#fake-id {} /* matches the element with id="#fake-id" */
#-a-b-c- {} /* matches the element with id="-a-b-c-" */
#© {} /* matches the element with id="©" */

\\.\\\` {
 color: aliceblue;
}

\\.\\$\\{foo\\} {
  color: aliceblue;
}

/* \` */
/* \`\` */
/* \`\`\` */
/* \${} */
/* \\\\\` */

:root {
  --title-align: center;
  --sr-only: {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
    clip-path: inset(50%);
    border: 0;
  };
}

.test {
  content: "\\2014\\A0";
  content: "\\2014 \\A0";
  content: "\\A0 \\2014";
  content: "\\A0\\2014";
  margin-top: 1px\\9;
  background-color: #000\\9;
}

.light.on .bulb:before{
  content: '💡';
}

.base64 {
  background: url(data:img/jpg;base64,iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAhxJREFUSA3tk71rU1EYxnMTEoJUkowWwdJ2akEHBfGjCiIF6ZylVUKSm2TqZLGI+A/oIu2UXm8C4lAyF4SWji0tdFLo1Eo7VN0SaBEhH7e/Nz0nPTfGOjiaCyfPc5734zlfCQT6X/8E/vUErL81KBaL9y3LSnued5PcITjUOwR3gsFg2bbtjYt6/NGgXC4P1et1l2aPLmpAbD0SidjpdPqgV15PA9d17zQajU8UxHQRK/4G35Q5pveAK8LlI1ZjPMnlcltnyvnvbwaO41xvtVqy7YHztMACq5xnlb9EY3dRdvcGo1kj5wR+t1AofDG0gM+A875E8DNjRCexsrV8Pj9ZqVQitVrtqejxePxjMpmss5hVTB4buXvMb2DyU2tBTRS+BjvNlVYUpPl7iuVO3Gq1uoQx1FtSOW1gPgp5ZWrdBtNmUDgv5asgxQ8F1af5vhY0YjyjuWC3wTszKJz7GBOkcFlQfW2ONq4FjWi+Hj6DRCKxQOK2TlY4x92EuYd5dvMAbYIzfikau3pu5tJ8KxaLLfo0cyKci7tK4TZjUMcoXAmHwzle0Q/RaC5P1GFMyVx9R9Fo9HYqlTrSgqDvFelAqVQa5hmuMR/WGtjAaBdjwBoDQ0ZsnwVMZjKZ9n0Zem8DSeDPdrnZbL6F2l3NOvUYNZk4oVDoRTabPe4EDNJzB0ZcjAYxeoZ2i3FNxQ7BHYw/cB/fldaH//UETgHHO8S44KbfXgAAAABJRU5ErkJggg==);
}

a[href=''] {
  color: red;
}

a[href='' i] {
  color: red;
}

a[href=""] {
  color: blue;
}

a[href="" i] {
  color: blue;
}
",
    "",
  ],
]
`;

exports[`loader should work with \`templateLiteral\` support: warnings 1`] = `[]`;

exports[`loader should work with ModuleConcatenationPlugin (file-loader): errors 1`] = `[]`;

exports[`loader should work with ModuleConcatenationPlugin (file-loader): warnings 1`] = `[]`;

exports[`loader should work with ModuleConcatenationPlugin (url-loader): errors 1`] = `[]`;

exports[`loader should work with ModuleConcatenationPlugin (url-loader): warnings 1`] = `[]`;

exports[`loader should work with ModuleConcatenationPlugin: errors 1`] = `[]`;

exports[`loader should work with ModuleConcatenationPlugin: warnings 1`] = `[]`;

exports[`loader should work with built-in CSS support: errors 1`] = `[]`;

exports[`loader should work with built-in CSS support: module 1`] = `
"// Imports
import ___CSS_LOADER_API_NO_SOURCEMAP_IMPORT___ from "../../src/runtime/noSourceMaps.js";
import ___CSS_LOADER_API_IMPORT___ from "../../src/runtime/api.js";
import ___CSS_LOADER_GET_URL_IMPORT___ from "../../src/runtime/getUrl.js";
var ___CSS_LOADER_URL_IMPORT_0___ = new URL("./url/img.png", import.meta.url);
var ___CSS_LOADER_URL_IMPORT_1___ = new URL("data:img/jpg;base64,iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAhxJREFUSA3tk71rU1EYxnMTEoJUkowWwdJ2akEHBfGjCiIF6ZylVUKSm2TqZLGI+A/oIu2UXm8C4lAyF4SWji0tdFLo1Eo7VN0SaBEhH7e/Nz0nPTfGOjiaCyfPc5734zlfCQT6X/8E/vUErL81KBaL9y3LSnued5PcITjUOwR3gsFg2bbtjYt6/NGgXC4P1et1l2aPLmpAbD0SidjpdPqgV15PA9d17zQajU8UxHQRK/4G35Q5pveAK8LlI1ZjPMnlcltnyvnvbwaO41xvtVqy7YHztMACq5xnlb9EY3dRdvcGo1kj5wR+t1AofDG0gM+A875E8DNjRCexsrV8Pj9ZqVQitVrtqejxePxjMpmss5hVTB4buXvMb2DyU2tBTRS+BjvNlVYUpPl7iuVO3Gq1uoQx1FtSOW1gPgp5ZWrdBtNmUDgv5asgxQ8F1af5vhY0YjyjuWC3wTszKJz7GBOkcFlQfW2ONq4FjWi+Hj6DRCKxQOK2TlY4x92EuYd5dvMAbYIzfikau3pu5tJ8KxaLLfo0cyKci7tK4TZjUMcoXAmHwzle0Q/RaC5P1GFMyVx9R9Fo9HYqlTrSgqDvFelAqVQa5hmuMR/WGtjAaBdjwBoDQ0ZsnwVMZjKZ9n0Zem8DSeDPdrnZbL6F2l3NOvUYNZk4oVDoRTabPe4EDNJzB0ZcjAYxeoZ2i3FNxQ7BHYw/cB/fldaH//UETgHHO8S44KbfXgAAAABJRU5ErkJggg==", import.meta.url);
var ___CSS_LOADER_EXPORT___ = ___CSS_LOADER_API_IMPORT___(___CSS_LOADER_API_NO_SOURCEMAP_IMPORT___);
var ___CSS_LOADER_URL_REPLACEMENT_0___ = ___CSS_LOADER_GET_URL_IMPORT___(___CSS_LOADER_URL_IMPORT_0___);
var ___CSS_LOADER_URL_REPLACEMENT_1___ = ___CSS_LOADER_GET_URL_IMPORT___(___CSS_LOADER_URL_IMPORT_1___);
// Module
___CSS_LOADER_EXPORT___.push([module.id, \`@charset "UTF-8";


/* Comment */

.class {
  color: red;
  background: url(\${___CSS_LOADER_URL_REPLACEMENT_0___});
}

.class-duplicate-url {
  background: url(\${___CSS_LOADER_URL_REPLACEMENT_0___});
}

:root {
  --foo: 1px;
  --bar: 2px;
}

.class { a: b c d; }

.two {}

.u-m\\\\+ { a: b c d; }

.class { content: "\\\\F10C" }

@media only screen and (max-width: 600px) {
  body {
    background-color: lightblue;
  }
}

.class {
  content: "\\\\2193";
  content: "\\\\2193\\\\2193";
  content: "\\\\2193 \\\\2193";
  content: "\\\\2193\\\\2193\\\\2193";
  content: "\\\\2193 \\\\2193 \\\\2193";
}

.-top {}
.\\\\-top {}

#\\\\#test {}

.grid {
  display: flex;
  flex-wrap: wrap;
}
.grid.\\\\-top {
  align-items: flex-start;
}
.grid.-top {
  align-items: flex-start;
}
.grid.\\\\-middle {
  align-items: center;
}
.grid.\\\\-bottom {
  align-items: flex-end;
}

.u-m\\\\00002b {}

.u-m00002b {}

#u-m\\\\+ {}

body {
  font-family: '微软雅黑'; /* some chinese font name */
}

.myStyle {
  content: '\\\\e901';
}

.myStyle {
  content: '\\\\E901';
}

.♫ {}

.\\\\3A \\\\\\\`\\\\( {} /* matches elements with class=":\\\`(" */
.\\\\31 a2b3c {} /* matches elements with class="1a2b3c" */
#\\\\#fake-id {} /* matches the element with id="#fake-id" */
#-a-b-c- {} /* matches the element with id="-a-b-c-" */
#© {} /* matches the element with id="©" */

\\\\.\\\\\\\` {
 color: aliceblue;
}

\\\\.\\\\\\$\\\\{foo\\\\} {
  color: aliceblue;
}

/* \\\` */
/* \\\`\\\` */
/* \\\`\\\`\\\` */
/* \\\${} */
/* \\\\\\\\\\\` */

:root {
  --title-align: center;
  --sr-only: {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
    clip-path: inset(50%);
    border: 0;
  };
}

.test {
  content: "\\\\2014\\\\A0";
  content: "\\\\2014 \\\\A0";
  content: "\\\\A0 \\\\2014";
  content: "\\\\A0\\\\2014";
  margin-top: 1px\\\\9;
  background-color: #000\\\\9;
}

.light.on .bulb:before{
  content: '💡';
}

.base64 {
  background: url(\${___CSS_LOADER_URL_REPLACEMENT_1___});
}

a[href=''] {
  color: red;
}

a[href='' i] {
  color: red;
}

a[href=""] {
  color: blue;
}

a[href="" i] {
  color: blue;
}
\`, ""]);
// Exports
export default ___CSS_LOADER_EXPORT___;
"
`;

exports[`loader should work with built-in CSS support: result 1`] = `
[
  [
    "./basic.css",
    "@charset "UTF-8";


/* Comment */

.class {
  color: red;
  background: url(replaced_file_protocol_/webpack/public/path/img.png);
}

.class-duplicate-url {
  background: url(replaced_file_protocol_/webpack/public/path/img.png);
}

:root {
  --foo: 1px;
  --bar: 2px;
}

.class { a: b c d; }

.two {}

.u-m\\+ { a: b c d; }

.class { content: "\\F10C" }

@media only screen and (max-width: 600px) {
  body {
    background-color: lightblue;
  }
}

.class {
  content: "\\2193";
  content: "\\2193\\2193";
  content: "\\2193 \\2193";
  content: "\\2193\\2193\\2193";
  content: "\\2193 \\2193 \\2193";
}

.-top {}
.\\-top {}

#\\#test {}

.grid {
  display: flex;
  flex-wrap: wrap;
}
.grid.\\-top {
  align-items: flex-start;
}
.grid.-top {
  align-items: flex-start;
}
.grid.\\-middle {
  align-items: center;
}
.grid.\\-bottom {
  align-items: flex-end;
}

.u-m\\00002b {}

.u-m00002b {}

#u-m\\+ {}

body {
  font-family: '微软雅黑'; /* some chinese font name */
}

.myStyle {
  content: '\\e901';
}

.myStyle {
  content: '\\E901';
}

.♫ {}

.\\3A \\\`\\( {} /* matches elements with class=":\`(" */
.\\31 a2b3c {} /* matches elements with class="1a2b3c" */
#\\#fake-id {} /* matches the element with id="#fake-id" */
#-a-b-c- {} /* matches the element with id="-a-b-c-" */
#© {} /* matches the element with id="©" */

\\.\\\` {
 color: aliceblue;
}

\\.\\$\\{foo\\} {
  color: aliceblue;
}

/* \` */
/* \`\` */
/* \`\`\` */
/* \${} */
/* \\\\\` */

:root {
  --title-align: center;
  --sr-only: {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
    clip-path: inset(50%);
    border: 0;
  };
}

.test {
  content: "\\2014\\A0";
  content: "\\2014 \\A0";
  content: "\\A0 \\2014";
  content: "\\A0\\2014";
  margin-top: 1px\\9;
  background-color: #000\\9;
}

.light.on .bulb:before{
  content: '💡';
}

.base64 {
  background: url(data:img/jpg;base64,iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAhxJREFUSA3tk71rU1EYxnMTEoJUkowWwdJ2akEHBfGjCiIF6ZylVUKSm2TqZLGI+A/oIu2UXm8C4lAyF4SWji0tdFLo1Eo7VN0SaBEhH7e/Nz0nPTfGOjiaCyfPc5734zlfCQT6X/8E/vUErL81KBaL9y3LSnued5PcITjUOwR3gsFg2bbtjYt6/NGgXC4P1et1l2aPLmpAbD0SidjpdPqgV15PA9d17zQajU8UxHQRK/4G35Q5pveAK8LlI1ZjPMnlcltnyvnvbwaO41xvtVqy7YHztMACq5xnlb9EY3dRdvcGo1kj5wR+t1AofDG0gM+A875E8DNjRCexsrV8Pj9ZqVQitVrtqejxePxjMpmss5hVTB4buXvMb2DyU2tBTRS+BjvNlVYUpPl7iuVO3Gq1uoQx1FtSOW1gPgp5ZWrdBtNmUDgv5asgxQ8F1af5vhY0YjyjuWC3wTszKJz7GBOkcFlQfW2ONq4FjWi+Hj6DRCKxQOK2TlY4x92EuYd5dvMAbYIzfikau3pu5tJ8KxaLLfo0cyKci7tK4TZjUMcoXAmHwzle0Q/RaC5P1GFMyVx9R9Fo9HYqlTrSgqDvFelAqVQa5hmuMR/WGtjAaBdjwBoDQ0ZsnwVMZjKZ9n0Zem8DSeDPdrnZbL6F2l3NOvUYNZk4oVDoRTabPe4EDNJzB0ZcjAYxeoZ2i3FNxQ7BHYw/cB/fldaH//UETgHHO8S44KbfXgAAAABJRU5ErkJggg==);
}

a[href=''] {
  color: red;
}

a[href='' i] {
  color: red;
}

a[href=""] {
  color: blue;
}

a[href="" i] {
  color: blue;
}
",
    "",
  ],
]
`;

exports[`loader should work with built-in CSS support: warnings 1`] = `[]`;

exports[`loader should work with empty css: errors 1`] = `[]`;

exports[`loader should work with empty css: module 1`] = `
"// Imports
import ___CSS_LOADER_API_NO_SOURCEMAP_IMPORT___ from "../../src/runtime/noSourceMaps.js";
import ___CSS_LOADER_API_IMPORT___ from "../../src/runtime/api.js";
var ___CSS_LOADER_EXPORT___ = ___CSS_LOADER_API_IMPORT___(___CSS_LOADER_API_NO_SOURCEMAP_IMPORT___);
// Module
___CSS_LOADER_EXPORT___.push([module.id, \`\`, ""]);
// Exports
export default ___CSS_LOADER_EXPORT___;
"
`;

exports[`loader should work with empty css: result 1`] = `
[
  [
    "./empty.css",
    "",
    "",
  ],
]
`;

exports[`loader should work with empty css: warnings 1`] = `[]`;

exports[`loader should work with empty options: errors 1`] = `[]`;

exports[`loader should work with empty options: module 1`] = `
"// Imports
import ___CSS_LOADER_API_NO_SOURCEMAP_IMPORT___ from "../../src/runtime/noSourceMaps.js";
import ___CSS_LOADER_API_IMPORT___ from "../../src/runtime/api.js";
import ___CSS_LOADER_GET_URL_IMPORT___ from "../../src/runtime/getUrl.js";
var ___CSS_LOADER_URL_IMPORT_0___ = new URL("./url/img.png", import.meta.url);
var ___CSS_LOADER_URL_IMPORT_1___ = new URL("data:img/jpg;base64,iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAhxJREFUSA3tk71rU1EYxnMTEoJUkowWwdJ2akEHBfGjCiIF6ZylVUKSm2TqZLGI+A/oIu2UXm8C4lAyF4SWji0tdFLo1Eo7VN0SaBEhH7e/Nz0nPTfGOjiaCyfPc5734zlfCQT6X/8E/vUErL81KBaL9y3LSnued5PcITjUOwR3gsFg2bbtjYt6/NGgXC4P1et1l2aPLmpAbD0SidjpdPqgV15PA9d17zQajU8UxHQRK/4G35Q5pveAK8LlI1ZjPMnlcltnyvnvbwaO41xvtVqy7YHztMACq5xnlb9EY3dRdvcGo1kj5wR+t1AofDG0gM+A875E8DNjRCexsrV8Pj9ZqVQitVrtqejxePxjMpmss5hVTB4buXvMb2DyU2tBTRS+BjvNlVYUpPl7iuVO3Gq1uoQx1FtSOW1gPgp5ZWrdBtNmUDgv5asgxQ8F1af5vhY0YjyjuWC3wTszKJz7GBOkcFlQfW2ONq4FjWi+Hj6DRCKxQOK2TlY4x92EuYd5dvMAbYIzfikau3pu5tJ8KxaLLfo0cyKci7tK4TZjUMcoXAmHwzle0Q/RaC5P1GFMyVx9R9Fo9HYqlTrSgqDvFelAqVQa5hmuMR/WGtjAaBdjwBoDQ0ZsnwVMZjKZ9n0Zem8DSeDPdrnZbL6F2l3NOvUYNZk4oVDoRTabPe4EDNJzB0ZcjAYxeoZ2i3FNxQ7BHYw/cB/fldaH//UETgHHO8S44KbfXgAAAABJRU5ErkJggg==", import.meta.url);
var ___CSS_LOADER_EXPORT___ = ___CSS_LOADER_API_IMPORT___(___CSS_LOADER_API_NO_SOURCEMAP_IMPORT___);
var ___CSS_LOADER_URL_REPLACEMENT_0___ = ___CSS_LOADER_GET_URL_IMPORT___(___CSS_LOADER_URL_IMPORT_0___);
var ___CSS_LOADER_URL_REPLACEMENT_1___ = ___CSS_LOADER_GET_URL_IMPORT___(___CSS_LOADER_URL_IMPORT_1___);
// Module
___CSS_LOADER_EXPORT___.push([module.id, \`@charset "UTF-8";


/* Comment */

.class {
  color: red;
  background: url(\${___CSS_LOADER_URL_REPLACEMENT_0___});
}

.class-duplicate-url {
  background: url(\${___CSS_LOADER_URL_REPLACEMENT_0___});
}

:root {
  --foo: 1px;
  --bar: 2px;
}

.class { a: b c d; }

.two {}

.u-m\\\\+ { a: b c d; }

.class { content: "\\\\F10C" }

@media only screen and (max-width: 600px) {
  body {
    background-color: lightblue;
  }
}

.class {
  content: "\\\\2193";
  content: "\\\\2193\\\\2193";
  content: "\\\\2193 \\\\2193";
  content: "\\\\2193\\\\2193\\\\2193";
  content: "\\\\2193 \\\\2193 \\\\2193";
}

.-top {}
.\\\\-top {}

#\\\\#test {}

.grid {
  display: flex;
  flex-wrap: wrap;
}
.grid.\\\\-top {
  align-items: flex-start;
}
.grid.-top {
  align-items: flex-start;
}
.grid.\\\\-middle {
  align-items: center;
}
.grid.\\\\-bottom {
  align-items: flex-end;
}

.u-m\\\\00002b {}

.u-m00002b {}

#u-m\\\\+ {}

body {
  font-family: '微软雅黑'; /* some chinese font name */
}

.myStyle {
  content: '\\\\e901';
}

.myStyle {
  content: '\\\\E901';
}

.♫ {}

.\\\\3A \\\\\\\`\\\\( {} /* matches elements with class=":\\\`(" */
.\\\\31 a2b3c {} /* matches elements with class="1a2b3c" */
#\\\\#fake-id {} /* matches the element with id="#fake-id" */
#-a-b-c- {} /* matches the element with id="-a-b-c-" */
#© {} /* matches the element with id="©" */

\\\\.\\\\\\\` {
 color: aliceblue;
}

\\\\.\\\\\\$\\\\{foo\\\\} {
  color: aliceblue;
}

/* \\\` */
/* \\\`\\\` */
/* \\\`\\\`\\\` */
/* \\\${} */
/* \\\\\\\\\\\` */

:root {
  --title-align: center;
  --sr-only: {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
    clip-path: inset(50%);
    border: 0;
  };
}

.test {
  content: "\\\\2014\\\\A0";
  content: "\\\\2014 \\\\A0";
  content: "\\\\A0 \\\\2014";
  content: "\\\\A0\\\\2014";
  margin-top: 1px\\\\9;
  background-color: #000\\\\9;
}

.light.on .bulb:before{
  content: '💡';
}

.base64 {
  background: url(\${___CSS_LOADER_URL_REPLACEMENT_1___});
}

a[href=''] {
  color: red;
}

a[href='' i] {
  color: red;
}

a[href=""] {
  color: blue;
}

a[href="" i] {
  color: blue;
}
\`, ""]);
// Exports
export default ___CSS_LOADER_EXPORT___;
"
`;

exports[`loader should work with empty options: result 1`] = `
[
  [
    "./basic.css",
    "@charset "UTF-8";


/* Comment */

.class {
  color: red;
  background: url(replaced_file_protocol_/webpack/public/path/img.png);
}

.class-duplicate-url {
  background: url(replaced_file_protocol_/webpack/public/path/img.png);
}

:root {
  --foo: 1px;
  --bar: 2px;
}

.class { a: b c d; }

.two {}

.u-m\\+ { a: b c d; }

.class { content: "\\F10C" }

@media only screen and (max-width: 600px) {
  body {
    background-color: lightblue;
  }
}

.class {
  content: "\\2193";
  content: "\\2193\\2193";
  content: "\\2193 \\2193";
  content: "\\2193\\2193\\2193";
  content: "\\2193 \\2193 \\2193";
}

.-top {}
.\\-top {}

#\\#test {}

.grid {
  display: flex;
  flex-wrap: wrap;
}
.grid.\\-top {
  align-items: flex-start;
}
.grid.-top {
  align-items: flex-start;
}
.grid.\\-middle {
  align-items: center;
}
.grid.\\-bottom {
  align-items: flex-end;
}

.u-m\\00002b {}

.u-m00002b {}

#u-m\\+ {}

body {
  font-family: '微软雅黑'; /* some chinese font name */
}

.myStyle {
  content: '\\e901';
}

.myStyle {
  content: '\\E901';
}

.♫ {}

.\\3A \\\`\\( {} /* matches elements with class=":\`(" */
.\\31 a2b3c {} /* matches elements with class="1a2b3c" */
#\\#fake-id {} /* matches the element with id="#fake-id" */
#-a-b-c- {} /* matches the element with id="-a-b-c-" */
#© {} /* matches the element with id="©" */

\\.\\\` {
 color: aliceblue;
}

\\.\\$\\{foo\\} {
  color: aliceblue;
}

/* \` */
/* \`\` */
/* \`\`\` */
/* \${} */
/* \\\\\` */

:root {
  --title-align: center;
  --sr-only: {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
    clip-path: inset(50%);
    border: 0;
  };
}

.test {
  content: "\\2014\\A0";
  content: "\\2014 \\A0";
  content: "\\A0 \\2014";
  content: "\\A0\\2014";
  margin-top: 1px\\9;
  background-color: #000\\9;
}

.light.on .bulb:before{
  content: '💡';
}

.base64 {
  background: url(data:img/jpg;base64,iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAhxJREFUSA3tk71rU1EYxnMTEoJUkowWwdJ2akEHBfGjCiIF6ZylVUKSm2TqZLGI+A/oIu2UXm8C4lAyF4SWji0tdFLo1Eo7VN0SaBEhH7e/Nz0nPTfGOjiaCyfPc5734zlfCQT6X/8E/vUErL81KBaL9y3LSnued5PcITjUOwR3gsFg2bbtjYt6/NGgXC4P1et1l2aPLmpAbD0SidjpdPqgV15PA9d17zQajU8UxHQRK/4G35Q5pveAK8LlI1ZjPMnlcltnyvnvbwaO41xvtVqy7YHztMACq5xnlb9EY3dRdvcGo1kj5wR+t1AofDG0gM+A875E8DNjRCexsrV8Pj9ZqVQitVrtqejxePxjMpmss5hVTB4buXvMb2DyU2tBTRS+BjvNlVYUpPl7iuVO3Gq1uoQx1FtSOW1gPgp5ZWrdBtNmUDgv5asgxQ8F1af5vhY0YjyjuWC3wTszKJz7GBOkcFlQfW2ONq4FjWi+Hj6DRCKxQOK2TlY4x92EuYd5dvMAbYIzfikau3pu5tJ8KxaLLfo0cyKci7tK4TZjUMcoXAmHwzle0Q/RaC5P1GFMyVx9R9Fo9HYqlTrSgqDvFelAqVQa5hmuMR/WGtjAaBdjwBoDQ0ZsnwVMZjKZ9n0Zem8DSeDPdrnZbL6F2l3NOvUYNZk4oVDoRTabPe4EDNJzB0ZcjAYxeoZ2i3FNxQ7BHYw/cB/fldaH//UETgHHO8S44KbfXgAAAABJRU5ErkJggg==);
}

a[href=''] {
  color: red;
}

a[href='' i] {
  color: red;
}

a[href=""] {
  color: blue;
}

a[href="" i] {
  color: blue;
}
",
    "",
  ],
]
`;

exports[`loader should work with empty options: warnings 1`] = `[]`;

exports[`loader should work with inline module syntax: errors 1`] = `[]`;

exports[`loader should work with inline module syntax: module 1`] = `
"// Imports
import ___CSS_LOADER_API_NO_SOURCEMAP_IMPORT___ from "../../src/runtime/noSourceMaps.js";
import ___CSS_LOADER_API_IMPORT___ from "../../src/runtime/api.js";
import ___CSS_LOADER_AT_RULE_IMPORT_0___ from "other.modules.css!=!-!../../src/index.js??ruleSet[1].rules[0].rules[0]!../../node_modules/sass-loader/dist/cjs.js!./index-loader-syntax.modules.css";
import ___CSS_LOADER_AT_RULE_IMPORT_1___ from "plain.scss!=!-!../../src/index.js??ruleSet[1].rules[0].rules[0]!../../node_modules/sass-loader/dist/cjs.js!./index-loader-syntax-sass.css";
import ___CSS_LOADER_AT_RULE_IMPORT_2___ from "other.modules.scss!=!-!../../src/index.js??ruleSet[1].rules[0].rules[0]!../../node_modules/sass-loader/dist/cjs.js!./index-loader-syntax-sass.modules.css";
import ___CSS_LOADER_AT_RULE_IMPORT_3___ from "other.modules.css!=!-!../../src/index.js??ruleSet[1].rules[0].rules[0]!../../node_modules/sass-loader/dist/cjs.js!./my-inline-loader!./index-loader-syntax.modules.css";
import ___CSS_LOADER_AT_RULE_IMPORT_4___ from "plain.scss!=!-!../../src/index.js??ruleSet[1].rules[0].rules[0]!../../node_modules/sass-loader/dist/cjs.js!./my-inline-loader!./index-loader-syntax.modules.css";
import ___CSS_LOADER_AT_RULE_IMPORT_5___ from "other.modules.scss!=!-!../../src/index.js??ruleSet[1].rules[0].rules[0]!../../node_modules/sass-loader/dist/cjs.js!./my-inline-loader!./index-loader-syntax-sass.modules.css";
var ___CSS_LOADER_EXPORT___ = ___CSS_LOADER_API_IMPORT___(___CSS_LOADER_API_NO_SOURCEMAP_IMPORT___);
___CSS_LOADER_EXPORT___.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
___CSS_LOADER_EXPORT___.i(___CSS_LOADER_AT_RULE_IMPORT_1___);
___CSS_LOADER_EXPORT___.i(___CSS_LOADER_AT_RULE_IMPORT_2___);
___CSS_LOADER_EXPORT___.i(___CSS_LOADER_AT_RULE_IMPORT_3___);
___CSS_LOADER_EXPORT___.i(___CSS_LOADER_AT_RULE_IMPORT_4___);
___CSS_LOADER_EXPORT___.i(___CSS_LOADER_AT_RULE_IMPORT_5___);
// Module
___CSS_LOADER_EXPORT___.push([module.id, \`.a {
  color: red;
}\`, ""]);
// Exports
export default ___CSS_LOADER_EXPORT___;
"
`;

exports[`loader should work with inline module syntax: result 1`] = `
[
  [
    "other.modules.css!=!../../src/index.js??ruleSet[1].rules[0].rules[0]!../../node_modules/sass-loader/dist/cjs.js!./index-loader-syntax.modules.css",
    ".ZVx7VAdLOO3PJ1TqkYUn {
  color: red;
}

.x0BV6RnIqi6PTJ6If2oA {
  color: white;
}",
    "",
  ],
  [
    "button.modules.css!=!./index-loader-syntax-sass.css",
    ".n6iVkcAs9Wu9ovztqf8g {
  width: 5px;
}",
    "",
  ],
  [
    "other.modules.scss!=!../../src/index.js??ruleSet[1].rules[0].rules[0]!../../node_modules/sass-loader/dist/cjs.js!./index-loader-syntax-sass.modules.css",
    ".NF9v028MAhreSp2TJZnn > .ss2pNzM7P7DcLJerCZFm {
  color: red;
}",
    "",
  ],
  [
    "other.modules.css!=!../../src/index.js??ruleSet[1].rules[0].rules[0]!../../node_modules/sass-loader/dist/cjs.js!./my-inline-loader/index.js!./index-loader-syntax.modules.css",
    ".ZVx7VAdLOO3PJ1TqkYUn {
  color: red;
}

.x0BV6RnIqi6PTJ6If2oA {
  color: white;
}

.bNEIH_2ycglHGlceq20s {
  from: custom;
}",
    "",
  ],
  [
    "other.modules.css!=!../../src/index.js??ruleSet[1].rules[0].rules[0]!../../node_modules/sass-loader/dist/cjs.js!./my-inline-loader/index.js!./index-loader-syntax.modules.css",
    ".ZVx7VAdLOO3PJ1TqkYUn {
  color: red;
}

.x0BV6RnIqi6PTJ6If2oA {
  color: white;
}

.bNEIH_2ycglHGlceq20s {
  from: custom;
}",
    "",
  ],
  [
    "other.modules.scss!=!../../src/index.js??ruleSet[1].rules[0].rules[0]!../../node_modules/sass-loader/dist/cjs.js!./my-inline-loader/index.js!./index-loader-syntax-sass.modules.css",
    ".NF9v028MAhreSp2TJZnn > .ss2pNzM7P7DcLJerCZFm {
  color: red;
}

.NMxzPXmuJS2nd8LarB5I {
  from: custom;
}",
    "",
  ],
  [
    "./index-loader-syntax.css",
    ".a {
  color: red;
}",
    "",
  ],
  [
    "button.modules.css!=!./index-loader-syntax-sass.css",
    ".n6iVkcAs9Wu9ovztqf8g {
  width: 5px;
}",
    "",
  ],
  [
    "button.module.scss!=!./base64-loader/index.js?LmZvbyB7IGNvbG9yOiByZWQ7IH0=!./simple.js?foo=bar",
    ".QwIaKzIX2nnuKwGnu953 {
  color: red;
}",
    "",
  ],
  [
    "other.module.scss!=!./base64-loader/index.js?LmZvbyB7IGNvbG9yOiByZWQ7IH0=!./simple.js?foo=baz",
    ".L_0U1ZWuSHuIqdUV6KjO {
  color: red;
}",
    "",
  ],
]
`;

exports[`loader should work with inline module syntax: warnings 1`] = `
[
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Deprecation The legacy JS API is deprecated and will be removed in Dart Sass 2.0.0.

More info: https://sass-lang.com/d/legacy-js-api",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Deprecation The legacy JS API is deprecated and will be removed in Dart Sass 2.0.0.

More info: https://sass-lang.com/d/legacy-js-api",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Deprecation The legacy JS API is deprecated and will be removed in Dart Sass 2.0.0.

More info: https://sass-lang.com/d/legacy-js-api",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Deprecation The legacy JS API is deprecated and will be removed in Dart Sass 2.0.0.

More info: https://sass-lang.com/d/legacy-js-api",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Deprecation The legacy JS API is deprecated and will be removed in Dart Sass 2.0.0.

More info: https://sass-lang.com/d/legacy-js-api",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Deprecation The legacy JS API is deprecated and will be removed in Dart Sass 2.0.0.

More info: https://sass-lang.com/d/legacy-js-api",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Deprecation The legacy JS API is deprecated and will be removed in Dart Sass 2.0.0.

More info: https://sass-lang.com/d/legacy-js-api",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Deprecation The legacy JS API is deprecated and will be removed in Dart Sass 2.0.0.

More info: https://sass-lang.com/d/legacy-js-api",
]
`;

exports[`loader should work with none AST metadata: errors 1`] = `[]`;

exports[`loader should work with none AST metadata: result 1`] = `
[
  [
    "./simple.css",
    ".some-class {
  color: red;
}
",
    "",
  ],
]
`;

exports[`loader should work with none AST metadata: warnings 1`] = `[]`;

exports[`loader should work with the "modules.auto" option and the "import.loaders" option: errors 1`] = `[]`;

exports[`loader should work with the "modules.auto" option and the "import.loaders" option: result 1`] = `
"/* Pure CSS */
.imported-by-pure {
  overflow-x: hidden;
  overflow-y: auto;
  overflow: hidden auto;
}
.pure {
  color: red;
}

/* PostCSS */
.imported-by-postcss {
  overflow-x: hidden;
  overflow-y: auto;
  overflow: hidden auto;
}
.postcss {
  color: rgba(0, 0, 255, 0.9);
}

.postcss:hover {
    color: #639;
  }

/* SCSS */
.imported-by-scss {
  overflow-x: hidden;
  overflow-y: auto;
  overflow: hidden auto;
}
.scss {
  font: 100% Helvetica, sans-serif;
  color: #333;
}
/* CSS modules */
.kSlR28XrNKt9I9mzvNxN {
  overflow-x: hidden;
  overflow-y: auto;
  overflow: hidden auto;
  color: red;
}

.global {
  color: blue;
}

/* CSS modules + SCSS */
.imported-by-module-scss {
  overflow-x: hidden;
  overflow-y: auto;
  overflow: hidden auto;
}
.lE126I07pG7EhKO3j2bD {
  color: #333;
  overflow-x: hidden;
  overflow-y: auto;
  overflow: hidden auto;
}

.global {
  color: #333;
}
"
`;

exports[`loader should work with the "modules.auto" option and the "import.loaders" option: warnings 1`] = `
[
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Deprecation The legacy JS API is deprecated and will be removed in Dart Sass 2.0.0.

More info: https://sass-lang.com/d/legacy-js-api",
  "ModuleWarning: Module Warning (from \`replaced original path\`):
Deprecation The legacy JS API is deprecated and will be removed in Dart Sass 2.0.0.

More info: https://sass-lang.com/d/legacy-js-api",
]
`;

exports[`loader should work with webpackIgnore comment: errors 1`] = `[]`;

exports[`loader should work with webpackIgnore comment: module 1`] = `
"// Imports
import ___CSS_LOADER_API_NO_SOURCEMAP_IMPORT___ from "../../src/runtime/noSourceMaps.js";
import ___CSS_LOADER_API_IMPORT___ from "../../src/runtime/api.js";
import ___CSS_LOADER_AT_RULE_IMPORT_0___ from "-!../../src/index.js??ruleSet[1].rules[0].use[0]!./simple.css";
import ___CSS_LOADER_GET_URL_IMPORT___ from "../../src/runtime/getUrl.js";
var ___CSS_LOADER_URL_IMPORT_0___ = new URL("./url/img.png", import.meta.url);
var ___CSS_LOADER_URL_IMPORT_1___ = new URL("./fonts/Roboto-Regular.woff2", import.meta.url);
var ___CSS_LOADER_URL_IMPORT_2___ = new URL("./fonts/Roboto-Regular.woff", import.meta.url);
var ___CSS_LOADER_URL_IMPORT_3___ = new URL("./fonts/Roboto-Regular.ttf", import.meta.url);
var ___CSS_LOADER_URL_IMPORT_4___ = new URL("./fonts/Roboto-Regular.svg", import.meta.url);
var ___CSS_LOADER_URL_IMPORT_5___ = new URL("./fonts/Roboto-Regular.eot", import.meta.url);
var ___CSS_LOADER_EXPORT___ = ___CSS_LOADER_API_IMPORT___(___CSS_LOADER_API_NO_SOURCEMAP_IMPORT___);
___CSS_LOADER_EXPORT___.push([module.id, "@import url(./basic.css);"]);
___CSS_LOADER_EXPORT___.push([module.id, "@import url(./imported.css);"]);
___CSS_LOADER_EXPORT___.push([module.id, "@import url(./simple.css);"]);
___CSS_LOADER_EXPORT___.push([module.id, "@import url(./simple.css);"]);
___CSS_LOADER_EXPORT___.push([module.id, "@import url(./simple.css);"]);
___CSS_LOADER_EXPORT___.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
___CSS_LOADER_EXPORT___.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
___CSS_LOADER_EXPORT___.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
___CSS_LOADER_EXPORT___.i(___CSS_LOADER_AT_RULE_IMPORT_0___);
var ___CSS_LOADER_URL_REPLACEMENT_0___ = ___CSS_LOADER_GET_URL_IMPORT___(___CSS_LOADER_URL_IMPORT_0___);
var ___CSS_LOADER_URL_REPLACEMENT_1___ = ___CSS_LOADER_GET_URL_IMPORT___(___CSS_LOADER_URL_IMPORT_1___);
var ___CSS_LOADER_URL_REPLACEMENT_2___ = ___CSS_LOADER_GET_URL_IMPORT___(___CSS_LOADER_URL_IMPORT_2___);
var ___CSS_LOADER_URL_REPLACEMENT_3___ = ___CSS_LOADER_GET_URL_IMPORT___(___CSS_LOADER_URL_IMPORT_3___);
var ___CSS_LOADER_URL_REPLACEMENT_4___ = ___CSS_LOADER_GET_URL_IMPORT___(___CSS_LOADER_URL_IMPORT_4___, { hash: "#Roboto-Regular" });
var ___CSS_LOADER_URL_REPLACEMENT_5___ = ___CSS_LOADER_GET_URL_IMPORT___(___CSS_LOADER_URL_IMPORT_5___);
var ___CSS_LOADER_URL_REPLACEMENT_6___ = ___CSS_LOADER_GET_URL_IMPORT___(___CSS_LOADER_URL_IMPORT_5___, { hash: "#iefix" });
var ___CSS_LOADER_URL_REPLACEMENT_7___ = ___CSS_LOADER_GET_URL_IMPORT___(___CSS_LOADER_URL_IMPORT_0___, { needQuotes: true });
// Module
___CSS_LOADER_EXPORT___.push([module.id, \`/* webpackIgnore: true */

/** Resolved **/
/** Resolved **/

.class {
  color: red;
  background: /** webpackIgnore: true */ url("./url/img.png"),  url(\${___CSS_LOADER_URL_REPLACEMENT_0___});
}

.class {
  color: red;
  background:/** webpackIgnore: true */url("./url/img.png"),  url(\${___CSS_LOADER_URL_REPLACEMENT_0___});
}

.class {
  color: red;
  background: url(\${___CSS_LOADER_URL_REPLACEMENT_0___}), /** webpackIgnore: true */ url("./url/img.png");
}

.class {
  color: red;
  /** webpackIgnore: true */
  background: url("./url/img.png"), url("./url/img.png");
}

.class {
  color: red;
  /** webpackIgnore: true */
  background: url("./url/img.png"), /** webpackIgnore: false */ url(\${___CSS_LOADER_URL_REPLACEMENT_0___});
}

.class {
  color: red;
  /** webpackIgnore: true */
  background: url("./url/img.png"), /** webpackIgnore: false */ url(\${___CSS_LOADER_URL_REPLACEMENT_0___}), /** webpackIgnore: true */ url("./url/img.png"), /** webpackIgnore: false */ url(\${___CSS_LOADER_URL_REPLACEMENT_0___});
}

.class {
  color: red;
  /** webpackIgnore: true */
  background: /** webpackIgnore: false */ url(\${___CSS_LOADER_URL_REPLACEMENT_0___}), /** webpackIgnore: true */ url("./url/img.png");
}

.class {
  color: red;
  background: /** webpackIgnore: true */ /** webpackIgnore: false */ url(\${___CSS_LOADER_URL_REPLACEMENT_0___}), url(\${___CSS_LOADER_URL_REPLACEMENT_0___});
}

.class {
  color: red;
  background: url(\${___CSS_LOADER_URL_REPLACEMENT_0___}), /** webpackIgnore: true */ /** webpackIgnore: false */ url(\${___CSS_LOADER_URL_REPLACEMENT_0___});
}

.class {
  color: red;
  background: url(\${___CSS_LOADER_URL_REPLACEMENT_0___}), /** webpackIgnore: false */ /** webpackIgnore: true */ url("./url/img.png");
}

.class {
  background:
    url(\${___CSS_LOADER_URL_REPLACEMENT_0___}),
    url(\${___CSS_LOADER_URL_REPLACEMENT_0___}),
      /** webpackIgnore: true **/ url("./url/img.png"),
    url(\${___CSS_LOADER_URL_REPLACEMENT_0___}),
      /** webpackIgnore: true **/ url("./url/img.png"),
    url(\${___CSS_LOADER_URL_REPLACEMENT_0___}),
    url(\${___CSS_LOADER_URL_REPLACEMENT_0___}),
    url(\${___CSS_LOADER_URL_REPLACEMENT_0___}),
      /** webpackIgnore: true **/
    url("./url/img.png");
}

@font-face {
  font-family: "Roboto";
  src: /** webpackIgnore: true **/ url("./fonts/Roboto-Regular.eot");
  src:
    /** webpackIgnore: true **/
    url("./fonts/Roboto-Regular.eot#iefix") format("embedded-opentype"),
    url(\${___CSS_LOADER_URL_REPLACEMENT_1___}) format("woff"),
    url(\${___CSS_LOADER_URL_REPLACEMENT_2___}) format("woff"),
    url(\${___CSS_LOADER_URL_REPLACEMENT_3___}) format("truetype"),
    url(\${___CSS_LOADER_URL_REPLACEMENT_4___}) format("svg");
  font-weight: 400;
  font-style: normal;
}

@font-face {
  font-family: "Roboto";
  src: /** webpackIgnore: true **/ url("./fonts/Roboto-Regular.eot");
  /** webpackIgnore: true **/
  src:
    url("./fonts/Roboto-Regular.eot#iefix") format("embedded-opentype"),
    url("./fonts/Roboto-Regular.woff2") format("woff"),
    url("./fonts/Roboto-Regular.woff") format("woff"),
    url("./fonts/Roboto-Regular.ttf") format("truetype"),
    url("./fonts/Roboto-Regular.svg#Roboto-Regular") format("svg");
  font-weight: 400;
  font-style: normal;
}

@font-face {
  font-family: "Roboto";
  src: url(\${___CSS_LOADER_URL_REPLACEMENT_5___});
  src:
    url(\${___CSS_LOADER_URL_REPLACEMENT_6___}) format("embedded-opentype"),
      /** webpackIgnore: true **/
    url("./fonts/Roboto-Regular.woff2") format("woff"),
    url(\${___CSS_LOADER_URL_REPLACEMENT_2___}) format("woff"),
      /** webpackIgnore: true **/
    url("./fonts/Roboto-Regular.ttf") format("truetype"),
    url(\${___CSS_LOADER_URL_REPLACEMENT_4___}) format("svg");
  font-weight: 400;
  font-style: normal;
}

.class {
  /*webpackIgnore:  true*/
  background-image: image-set(
    url(./url/img.png) 2x,
    url(./url/img.png) 3x,
    url(./url/img.png) 4x
  );
}

.class {
  /*webpackIgnore:  true*/
  background-image: 
    image-set(
        /*webpackIgnore:  false*/
        url(\${___CSS_LOADER_URL_REPLACEMENT_0___}) 2x,
        /*webpackIgnore:  true*/
        url(./url/img.png) 3x,
        url(./url/img.png) 4x,
        /*webpackIgnore:  false */
        /*webpackIgnore:  true */
        url(./url/img.png) 5x
    ), 
    url('./url/img.png');
}

.class {
    background-image:
      image-set(
        /*webpackIgnore:  false*/
        url(\${___CSS_LOADER_URL_REPLACEMENT_0___}) 2x,
        /*webpackIgnore:  true*/
        url(./url/img.png) 3x,
        url(\${___CSS_LOADER_URL_REPLACEMENT_0___}) 4x,
        /*webpackIgnore:  false */
        /*webpackIgnore:  true */
        url(./url/img.png) 5x
      ),
      /*webpackIgnore:  false*/
      url(\${___CSS_LOADER_URL_REPLACEMENT_0___}),
      /*webpackIgnore:  true*/
      url('./url/img.png');;
}

.class {
    background-image:
        image-set(
            /*webpackIgnore:  false*/
            url(\${___CSS_LOADER_URL_REPLACEMENT_0___}) 2x,
            /*webpackIgnore:  true*/
            url(./url/img.png) 3x,
            url(\${___CSS_LOADER_URL_REPLACEMENT_0___}) 4x,
            /*webpackIgnore:  false */
            /*webpackIgnore:  true */
            url(./url/img.png) 5x
        ),
        url(\${___CSS_LOADER_URL_REPLACEMENT_0___});
}

.class {
  background-image: image-set(
    /*webpackIgnore:  true*/
    url(./url/img.png) 2x,
    url(\${___CSS_LOADER_URL_REPLACEMENT_0___}) 3x,
      /*webpackIgnore:  true*/
    url(./url/img.png) 5x
  );
}

.class {
    background-image: image-set(
        /*webpackIgnore:  true*/
        './url/img.png' 2x,
        \${___CSS_LOADER_URL_REPLACEMENT_7___} 3x,
        /*webpackIgnore:  true*/
        './url/img.png' 5x
    );
}

.class {
  /*webpackIgnore:  true*/
  background-image: image-set(
    /*webpackIgnore:  false*/
    url(\${___CSS_LOADER_URL_REPLACEMENT_0___}) 2x,
    /*webpackIgnore:  true*/
    url(./url/img.png) 3x,
    /*webpackIgnore:  false*/
    url(\${___CSS_LOADER_URL_REPLACEMENT_0___}) 4x,
    url(./url/img.png) 5x
  );
}

.class {
  color: red;
  background: url(\${___CSS_LOADER_URL_REPLACEMENT_0___}), /** webpackIgnore: true */url("./url/img.png");
}

.class {
  color: red;
  background: url(\${___CSS_LOADER_URL_REPLACEMENT_0___}), /** webpackIgnore: true */ url("./url/img.png");
}

.class {
  color: red;
  background: url(\${___CSS_LOADER_URL_REPLACEMENT_0___})/** webpackIgnore: true */, url(\${___CSS_LOADER_URL_REPLACEMENT_0___});
}

.class {
  background-image:
    image-set(
      url(\${___CSS_LOADER_URL_REPLACEMENT_0___}) 2x  /*webpackIgnore:  true*/,
      url(\${___CSS_LOADER_URL_REPLACEMENT_0___}) /*webpackIgnore:  true*/ 3x,
      url(\${___CSS_LOADER_URL_REPLACEMENT_0___}) 4x /*webpackIgnore:  true*/,
      /*webpackIgnore:  true*/url(./url/img.png) 5x,
      /*webpackIgnore:  true*/ url(./url/img.png) 6x,
      /*webpackIgnore:  true*/ 
      url(./url/img.png) 7x,
      url(\${___CSS_LOADER_URL_REPLACEMENT_0___}) 8x
    ),
    /*webpackIgnore:  false*/
    url(\${___CSS_LOADER_URL_REPLACEMENT_0___}),
    /*webpackIgnore:  true*/
    url('./url/img.png');
}

@font-face {
    font-family: "anticon";
    src: url("//at.alicdn.com/t/font_1434092639_4910953.eot?#iefix") format("embedded-opentype"),
    /* this comment is required */
    url("//at.alicdn.com/t/font_1434092639_4910953.woff") format("woff");
}
\`, ""]);
// Exports
export default ___CSS_LOADER_EXPORT___;
"
`;

exports[`loader should work with webpackIgnore comment: result 1`] = `
[
  [
    "./webpackIgnore.css",
    "@import url(./basic.css);",
  ],
  [
    "./webpackIgnore.css",
    "@import url(./imported.css);",
  ],
  [
    "./webpackIgnore.css",
    "@import url(./simple.css);",
  ],
  [
    "./webpackIgnore.css",
    "@import url(./simple.css);",
  ],
  [
    "./webpackIgnore.css",
    "@import url(./simple.css);",
  ],
  [
    "../../src/index.js??ruleSet[1].rules[0].use[0]!./simple.css",
    ".some-class {
  color: red;
}
",
    "",
  ],
  [
    "../../src/index.js??ruleSet[1].rules[0].use[0]!./simple.css",
    ".some-class {
  color: red;
}
",
    "",
  ],
  [
    "../../src/index.js??ruleSet[1].rules[0].use[0]!./simple.css",
    ".some-class {
  color: red;
}
",
    "",
  ],
  [
    "../../src/index.js??ruleSet[1].rules[0].use[0]!./simple.css",
    ".some-class {
  color: red;
}
",
    "",
  ],
  [
    "./webpackIgnore.css",
    "/* webpackIgnore: true */

/** Resolved **/
/** Resolved **/

.class {
  color: red;
  background: /** webpackIgnore: true */ url("./url/img.png"),  url(replaced_file_protocol_/webpack/public/path/img.png);
}

.class {
  color: red;
  background:/** webpackIgnore: true */url("./url/img.png"),  url(replaced_file_protocol_/webpack/public/path/img.png);
}

.class {
  color: red;
  background: url(replaced_file_protocol_/webpack/public/path/img.png), /** webpackIgnore: true */ url("./url/img.png");
}

.class {
  color: red;
  /** webpackIgnore: true */
  background: url("./url/img.png"), url("./url/img.png");
}

.class {
  color: red;
  /** webpackIgnore: true */
  background: url("./url/img.png"), /** webpackIgnore: false */ url(replaced_file_protocol_/webpack/public/path/img.png);
}

.class {
  color: red;
  /** webpackIgnore: true */
  background: url("./url/img.png"), /** webpackIgnore: false */ url(replaced_file_protocol_/webpack/public/path/img.png), /** webpackIgnore: true */ url("./url/img.png"), /** webpackIgnore: false */ url(replaced_file_protocol_/webpack/public/path/img.png);
}

.class {
  color: red;
  /** webpackIgnore: true */
  background: /** webpackIgnore: false */ url(replaced_file_protocol_/webpack/public/path/img.png), /** webpackIgnore: true */ url("./url/img.png");
}

.class {
  color: red;
  background: /** webpackIgnore: true */ /** webpackIgnore: false */ url(replaced_file_protocol_/webpack/public/path/img.png), url(replaced_file_protocol_/webpack/public/path/img.png);
}

.class {
  color: red;
  background: url(replaced_file_protocol_/webpack/public/path/img.png), /** webpackIgnore: true */ /** webpackIgnore: false */ url(replaced_file_protocol_/webpack/public/path/img.png);
}

.class {
  color: red;
  background: url(replaced_file_protocol_/webpack/public/path/img.png), /** webpackIgnore: false */ /** webpackIgnore: true */ url("./url/img.png");
}

.class {
  background:
    url(replaced_file_protocol_/webpack/public/path/img.png),
    url(replaced_file_protocol_/webpack/public/path/img.png),
      /** webpackIgnore: true **/ url("./url/img.png"),
    url(replaced_file_protocol_/webpack/public/path/img.png),
      /** webpackIgnore: true **/ url("./url/img.png"),
    url(replaced_file_protocol_/webpack/public/path/img.png),
    url(replaced_file_protocol_/webpack/public/path/img.png),
    url(replaced_file_protocol_/webpack/public/path/img.png),
      /** webpackIgnore: true **/
    url("./url/img.png");
}

@font-face {
  font-family: "Roboto";
  src: /** webpackIgnore: true **/ url("./fonts/Roboto-Regular.eot");
  src:
    /** webpackIgnore: true **/
    url("./fonts/Roboto-Regular.eot#iefix") format("embedded-opentype"),
    url(replaced_file_protocol_/webpack/public/path/Roboto-Regular.woff2) format("woff"),
    url(replaced_file_protocol_/webpack/public/path/Roboto-Regular.woff) format("woff"),
    url(replaced_file_protocol_/webpack/public/path/Roboto-Regular.ttf) format("truetype"),
    url(replaced_file_protocol_/webpack/public/path/Roboto-Regular.svg#Roboto-Regular) format("svg");
  font-weight: 400;
  font-style: normal;
}

@font-face {
  font-family: "Roboto";
  src: /** webpackIgnore: true **/ url("./fonts/Roboto-Regular.eot");
  /** webpackIgnore: true **/
  src:
    url("./fonts/Roboto-Regular.eot#iefix") format("embedded-opentype"),
    url("./fonts/Roboto-Regular.woff2") format("woff"),
    url("./fonts/Roboto-Regular.woff") format("woff"),
    url("./fonts/Roboto-Regular.ttf") format("truetype"),
    url("./fonts/Roboto-Regular.svg#Roboto-Regular") format("svg");
  font-weight: 400;
  font-style: normal;
}

@font-face {
  font-family: "Roboto";
  src: url(replaced_file_protocol_/webpack/public/path/Roboto-Regular.eot);
  src:
    url(replaced_file_protocol_/webpack/public/path/Roboto-Regular.eot#iefix) format("embedded-opentype"),
      /** webpackIgnore: true **/
    url("./fonts/Roboto-Regular.woff2") format("woff"),
    url(replaced_file_protocol_/webpack/public/path/Roboto-Regular.woff) format("woff"),
      /** webpackIgnore: true **/
    url("./fonts/Roboto-Regular.ttf") format("truetype"),
    url(replaced_file_protocol_/webpack/public/path/Roboto-Regular.svg#Roboto-Regular) format("svg");
  font-weight: 400;
  font-style: normal;
}

.class {
  /*webpackIgnore:  true*/
  background-image: image-set(
    url(./url/img.png) 2x,
    url(./url/img.png) 3x,
    url(./url/img.png) 4x
  );
}

.class {
  /*webpackIgnore:  true*/
  background-image: 
    image-set(
        /*webpackIgnore:  false*/
        url(replaced_file_protocol_/webpack/public/path/img.png) 2x,
        /*webpackIgnore:  true*/
        url(./url/img.png) 3x,
        url(./url/img.png) 4x,
        /*webpackIgnore:  false */
        /*webpackIgnore:  true */
        url(./url/img.png) 5x
    ), 
    url('./url/img.png');
}

.class {
    background-image:
      image-set(
        /*webpackIgnore:  false*/
        url(replaced_file_protocol_/webpack/public/path/img.png) 2x,
        /*webpackIgnore:  true*/
        url(./url/img.png) 3x,
        url(replaced_file_protocol_/webpack/public/path/img.png) 4x,
        /*webpackIgnore:  false */
        /*webpackIgnore:  true */
        url(./url/img.png) 5x
      ),
      /*webpackIgnore:  false*/
      url(replaced_file_protocol_/webpack/public/path/img.png),
      /*webpackIgnore:  true*/
      url('./url/img.png');;
}

.class {
    background-image:
        image-set(
            /*webpackIgnore:  false*/
            url(replaced_file_protocol_/webpack/public/path/img.png) 2x,
            /*webpackIgnore:  true*/
            url(./url/img.png) 3x,
            url(replaced_file_protocol_/webpack/public/path/img.png) 4x,
            /*webpackIgnore:  false */
            /*webpackIgnore:  true */
            url(./url/img.png) 5x
        ),
        url(replaced_file_protocol_/webpack/public/path/img.png);
}

.class {
  background-image: image-set(
    /*webpackIgnore:  true*/
    url(./url/img.png) 2x,
    url(replaced_file_protocol_/webpack/public/path/img.png) 3x,
      /*webpackIgnore:  true*/
    url(./url/img.png) 5x
  );
}

.class {
    background-image: image-set(
        /*webpackIgnore:  true*/
        './url/img.png' 2x,
        "replaced_file_protocol_/webpack/public/path/img.png" 3x,
        /*webpackIgnore:  true*/
        './url/img.png' 5x
    );
}

.class {
  /*webpackIgnore:  true*/
  background-image: image-set(
    /*webpackIgnore:  false*/
    url(replaced_file_protocol_/webpack/public/path/img.png) 2x,
    /*webpackIgnore:  true*/
    url(./url/img.png) 3x,
    /*webpackIgnore:  false*/
    url(replaced_file_protocol_/webpack/public/path/img.png) 4x,
    url(./url/img.png) 5x
  );
}

.class {
  color: red;
  background: url(replaced_file_protocol_/webpack/public/path/img.png), /** webpackIgnore: true */url("./url/img.png");
}

.class {
  color: red;
  background: url(replaced_file_protocol_/webpack/public/path/img.png), /** webpackIgnore: true */ url("./url/img.png");
}

.class {
  color: red;
  background: url(replaced_file_protocol_/webpack/public/path/img.png)/** webpackIgnore: true */, url(replaced_file_protocol_/webpack/public/path/img.png);
}

.class {
  background-image:
    image-set(
      url(replaced_file_protocol_/webpack/public/path/img.png) 2x  /*webpackIgnore:  true*/,
      url(replaced_file_protocol_/webpack/public/path/img.png) /*webpackIgnore:  true*/ 3x,
      url(replaced_file_protocol_/webpack/public/path/img.png) 4x /*webpackIgnore:  true*/,
      /*webpackIgnore:  true*/url(./url/img.png) 5x,
      /*webpackIgnore:  true*/ url(./url/img.png) 6x,
      /*webpackIgnore:  true*/ 
      url(./url/img.png) 7x,
      url(replaced_file_protocol_/webpack/public/path/img.png) 8x
    ),
    /*webpackIgnore:  false*/
    url(replaced_file_protocol_/webpack/public/path/img.png),
    /*webpackIgnore:  true*/
    url('./url/img.png');
}

@font-face {
    font-family: "anticon";
    src: url("//at.alicdn.com/t/font_1434092639_4910953.eot?#iefix") format("embedded-opentype"),
    /* this comment is required */
    url("//at.alicdn.com/t/font_1434092639_4910953.woff") format("woff");
}
",
    "",
  ],
]
`;

exports[`loader should work with webpackIgnore comment: warnings 1`] = `[]`;

exports[`loader should work: errors 1`] = `[]`;

exports[`loader should work: module 1`] = `
"// Imports
import ___CSS_LOADER_API_NO_SOURCEMAP_IMPORT___ from "../../src/runtime/noSourceMaps.js";
import ___CSS_LOADER_API_IMPORT___ from "../../src/runtime/api.js";
import ___CSS_LOADER_GET_URL_IMPORT___ from "../../src/runtime/getUrl.js";
var ___CSS_LOADER_URL_IMPORT_0___ = new URL("./url/img.png", import.meta.url);
var ___CSS_LOADER_URL_IMPORT_1___ = new URL("data:img/jpg;base64,iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAhxJREFUSA3tk71rU1EYxnMTEoJUkowWwdJ2akEHBfGjCiIF6ZylVUKSm2TqZLGI+A/oIu2UXm8C4lAyF4SWji0tdFLo1Eo7VN0SaBEhH7e/Nz0nPTfGOjiaCyfPc5734zlfCQT6X/8E/vUErL81KBaL9y3LSnued5PcITjUOwR3gsFg2bbtjYt6/NGgXC4P1et1l2aPLmpAbD0SidjpdPqgV15PA9d17zQajU8UxHQRK/4G35Q5pveAK8LlI1ZjPMnlcltnyvnvbwaO41xvtVqy7YHztMACq5xnlb9EY3dRdvcGo1kj5wR+t1AofDG0gM+A875E8DNjRCexsrV8Pj9ZqVQitVrtqejxePxjMpmss5hVTB4buXvMb2DyU2tBTRS+BjvNlVYUpPl7iuVO3Gq1uoQx1FtSOW1gPgp5ZWrdBtNmUDgv5asgxQ8F1af5vhY0YjyjuWC3wTszKJz7GBOkcFlQfW2ONq4FjWi+Hj6DRCKxQOK2TlY4x92EuYd5dvMAbYIzfikau3pu5tJ8KxaLLfo0cyKci7tK4TZjUMcoXAmHwzle0Q/RaC5P1GFMyVx9R9Fo9HYqlTrSgqDvFelAqVQa5hmuMR/WGtjAaBdjwBoDQ0ZsnwVMZjKZ9n0Zem8DSeDPdrnZbL6F2l3NOvUYNZk4oVDoRTabPe4EDNJzB0ZcjAYxeoZ2i3FNxQ7BHYw/cB/fldaH//UETgHHO8S44KbfXgAAAABJRU5ErkJggg==", import.meta.url);
var ___CSS_LOADER_EXPORT___ = ___CSS_LOADER_API_IMPORT___(___CSS_LOADER_API_NO_SOURCEMAP_IMPORT___);
var ___CSS_LOADER_URL_REPLACEMENT_0___ = ___CSS_LOADER_GET_URL_IMPORT___(___CSS_LOADER_URL_IMPORT_0___);
var ___CSS_LOADER_URL_REPLACEMENT_1___ = ___CSS_LOADER_GET_URL_IMPORT___(___CSS_LOADER_URL_IMPORT_1___);
// Module
___CSS_LOADER_EXPORT___.push([module.id, \`@charset "UTF-8";


/* Comment */

.class {
  color: red;
  background: url(\${___CSS_LOADER_URL_REPLACEMENT_0___});
}

.class-duplicate-url {
  background: url(\${___CSS_LOADER_URL_REPLACEMENT_0___});
}

:root {
  --foo: 1px;
  --bar: 2px;
}

.class { a: b c d; }

.two {}

.u-m\\\\+ { a: b c d; }

.class { content: "\\\\F10C" }

@media only screen and (max-width: 600px) {
  body {
    background-color: lightblue;
  }
}

.class {
  content: "\\\\2193";
  content: "\\\\2193\\\\2193";
  content: "\\\\2193 \\\\2193";
  content: "\\\\2193\\\\2193\\\\2193";
  content: "\\\\2193 \\\\2193 \\\\2193";
}

.-top {}
.\\\\-top {}

#\\\\#test {}

.grid {
  display: flex;
  flex-wrap: wrap;
}
.grid.\\\\-top {
  align-items: flex-start;
}
.grid.-top {
  align-items: flex-start;
}
.grid.\\\\-middle {
  align-items: center;
}
.grid.\\\\-bottom {
  align-items: flex-end;
}

.u-m\\\\00002b {}

.u-m00002b {}

#u-m\\\\+ {}

body {
  font-family: '微软雅黑'; /* some chinese font name */
}

.myStyle {
  content: '\\\\e901';
}

.myStyle {
  content: '\\\\E901';
}

.♫ {}

.\\\\3A \\\\\\\`\\\\( {} /* matches elements with class=":\\\`(" */
.\\\\31 a2b3c {} /* matches elements with class="1a2b3c" */
#\\\\#fake-id {} /* matches the element with id="#fake-id" */
#-a-b-c- {} /* matches the element with id="-a-b-c-" */
#© {} /* matches the element with id="©" */

\\\\.\\\\\\\` {
 color: aliceblue;
}

\\\\.\\\\\\$\\\\{foo\\\\} {
  color: aliceblue;
}

/* \\\` */
/* \\\`\\\` */
/* \\\`\\\`\\\` */
/* \\\${} */
/* \\\\\\\\\\\` */

:root {
  --title-align: center;
  --sr-only: {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
    clip-path: inset(50%);
    border: 0;
  };
}

.test {
  content: "\\\\2014\\\\A0";
  content: "\\\\2014 \\\\A0";
  content: "\\\\A0 \\\\2014";
  content: "\\\\A0\\\\2014";
  margin-top: 1px\\\\9;
  background-color: #000\\\\9;
}

.light.on .bulb:before{
  content: '💡';
}

.base64 {
  background: url(\${___CSS_LOADER_URL_REPLACEMENT_1___});
}

a[href=''] {
  color: red;
}

a[href='' i] {
  color: red;
}

a[href=""] {
  color: blue;
}

a[href="" i] {
  color: blue;
}
\`, ""]);
// Exports
export default ___CSS_LOADER_EXPORT___;
"
`;

exports[`loader should work: result 1`] = `
[
  [
    "./basic.css",
    "@charset "UTF-8";


/* Comment */

.class {
  color: red;
  background: url(replaced_file_protocol_/webpack/public/path/img.png);
}

.class-duplicate-url {
  background: url(replaced_file_protocol_/webpack/public/path/img.png);
}

:root {
  --foo: 1px;
  --bar: 2px;
}

.class { a: b c d; }

.two {}

.u-m\\+ { a: b c d; }

.class { content: "\\F10C" }

@media only screen and (max-width: 600px) {
  body {
    background-color: lightblue;
  }
}

.class {
  content: "\\2193";
  content: "\\2193\\2193";
  content: "\\2193 \\2193";
  content: "\\2193\\2193\\2193";
  content: "\\2193 \\2193 \\2193";
}

.-top {}
.\\-top {}

#\\#test {}

.grid {
  display: flex;
  flex-wrap: wrap;
}
.grid.\\-top {
  align-items: flex-start;
}
.grid.-top {
  align-items: flex-start;
}
.grid.\\-middle {
  align-items: center;
}
.grid.\\-bottom {
  align-items: flex-end;
}

.u-m\\00002b {}

.u-m00002b {}

#u-m\\+ {}

body {
  font-family: '微软雅黑'; /* some chinese font name */
}

.myStyle {
  content: '\\e901';
}

.myStyle {
  content: '\\E901';
}

.♫ {}

.\\3A \\\`\\( {} /* matches elements with class=":\`(" */
.\\31 a2b3c {} /* matches elements with class="1a2b3c" */
#\\#fake-id {} /* matches the element with id="#fake-id" */
#-a-b-c- {} /* matches the element with id="-a-b-c-" */
#© {} /* matches the element with id="©" */

\\.\\\` {
 color: aliceblue;
}

\\.\\$\\{foo\\} {
  color: aliceblue;
}

/* \` */
/* \`\` */
/* \`\`\` */
/* \${} */
/* \\\\\` */

:root {
  --title-align: center;
  --sr-only: {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    overflow: hidden;
    clip: rect(0,0,0,0);
    white-space: nowrap;
    clip-path: inset(50%);
    border: 0;
  };
}

.test {
  content: "\\2014\\A0";
  content: "\\2014 \\A0";
  content: "\\A0 \\2014";
  content: "\\A0\\2014";
  margin-top: 1px\\9;
  background-color: #000\\9;
}

.light.on .bulb:before{
  content: '💡';
}

.base64 {
  background: url(data:img/jpg;base64,iVBORw0KGgoAAAANSUhEUgAAABgAAAAYCAYAAADgdz34AAAAAXNSR0IArs4c6QAAAhxJREFUSA3tk71rU1EYxnMTEoJUkowWwdJ2akEHBfGjCiIF6ZylVUKSm2TqZLGI+A/oIu2UXm8C4lAyF4SWji0tdFLo1Eo7VN0SaBEhH7e/Nz0nPTfGOjiaCyfPc5734zlfCQT6X/8E/vUErL81KBaL9y3LSnued5PcITjUOwR3gsFg2bbtjYt6/NGgXC4P1et1l2aPLmpAbD0SidjpdPqgV15PA9d17zQajU8UxHQRK/4G35Q5pveAK8LlI1ZjPMnlcltnyvnvbwaO41xvtVqy7YHztMACq5xnlb9EY3dRdvcGo1kj5wR+t1AofDG0gM+A875E8DNjRCexsrV8Pj9ZqVQitVrtqejxePxjMpmss5hVTB4buXvMb2DyU2tBTRS+BjvNlVYUpPl7iuVO3Gq1uoQx1FtSOW1gPgp5ZWrdBtNmUDgv5asgxQ8F1af5vhY0YjyjuWC3wTszKJz7GBOkcFlQfW2ONq4FjWi+Hj6DRCKxQOK2TlY4x92EuYd5dvMAbYIzfikau3pu5tJ8KxaLLfo0cyKci7tK4TZjUMcoXAmHwzle0Q/RaC5P1GFMyVx9R9Fo9HYqlTrSgqDvFelAqVQa5hmuMR/WGtjAaBdjwBoDQ0ZsnwVMZjKZ9n0Zem8DSeDPdrnZbL6F2l3NOvUYNZk4oVDoRTabPe4EDNJzB0ZcjAYxeoZ2i3FNxQ7BHYw/cB/fldaH//UETgHHO8S44KbfXgAAAABJRU5ErkJggg==);
}

a[href=''] {
  color: red;
}

a[href='' i] {
  color: red;
}

a[href=""] {
  color: blue;
}

a[href="" i] {
  color: blue;
}
",
    "",
  ],
]
`;

exports[`loader should work: warnings 1`] = `[]`;
